--- a/localisation/KR_Chile_l_english.yml
+++ b/localisation/KR_Chile_l_english.yml
@@ -99,7 +99,7 @@ CHL_infeq2_desc:0 "Despite our efforts, the equipment in our military is not ent
 CHL_arty2:0 "Firepower Effort"
 CHL_arty2_:0 "We indeed require more accurate, well armed artillery pieces if we are to ensure the survival of our nation. Now, specialised guns, we will be able to rain fire upon the enemy!" 
 CHL_high_command:0 "High Command Reforms"
-CHL_high_command_desc:0 ""
+CHL_high_command_desc:0 "-"
 CHL_mountaineers:0 "Mountaineer Brigade Expansion"
 CHL_andean_strategy:0 "Andean Strategy"
 CHL_long_term_planning:0 "Long Term Planning"
