--- a/localisation/KR_Commune_of_France_l_english.yml
+++ b/localisation/KR_Commune_of_France_l_english.yml
@@ -485,7 +485,7 @@ FRA_Develop_Ukraine_desc:0 "Our Ukrainian comrades have applied to join the Phal
 ### Events ###
 
 comfrance.1.t:0 "The Commune of France"
-comfrance.1.d:0 "The Third Republic ended in the way it began: defeated by German arms, and facing Communist Revolution at home. In the November of 1919, a revolutionary General Strike was called by the CGT, paralysing the country and causing the downfall of the bourgeois government. 'The Party of Order' was not strong enough to put an end to the unrest and in the following months the ‘Establishment’ was forced out of France by a coalition of leftist forces in a brief but brutal civil war. \n\nFor the past 15 years, the self-styled 'Commune of France' has united behind a common platform of Syndicalist-Socialist consensus, headed by the ruling Comité de Salut Public. However, by 1936, the consensus that was resolved to rebuild the shattered country and defend the fruits of revolution from foreign menace is deemed as outdated by many critics, and there is a growing call for more radical policies. France is increasingly confident in her security and in her mission, but the French revolutionary tradition is varied, and it is unclear precisely which strands shall become dominant in the years to come..."
+comfrance.1.d:0 "The Third Republic ended in the way it began: defeated by German arms, and facing Communist Revolution at home. In the November of 1919, a revolutionary General Strike was called by the CGT, paralysing the country and causing the downfall of the bourgeois government. 'The Party of Order' was not strong enough to put an end to the unrest and in the following months the ‘Establishment' was forced out of France by a coalition of leftist forces in a brief but brutal civil war. \n\nFor the past 15 years, the self-styled 'Commune of France' has united behind a common platform of Syndicalist-Socialist consensus, headed by the ruling Comité de Salut Public. However, by 1936, the consensus that was resolved to rebuild the shattered country and defend the fruits of revolution from foreign menace is deemed as outdated by many critics, and there is a growing call for more radical policies. France is increasingly confident in her security and in her mission, but the French revolutionary tradition is varied, and it is unclear precisely which strands shall become dominant in the years to come..."
 comfrance.1.a:0 "Interesting"
 
 comfrance.5.t:0 "The Fall of Marceau Pivert"
@@ -576,7 +576,7 @@ comfrance.21.d:0 "The French chose Angelo Tasca, an Italian exile, as their new 
 comfrance.21.a:0 "Why did they choose him?"
 
 comfrance.22.t:0 "Camarade Blum's Call for Solidarity with Spain"
-comfrance.22.d:0 "As civil war ravages the Iberian peninsula, stories of white terror storm across the Pyrenees, horrifying our populace. Throughout the Commune, spontaneous gatherings and congresses have convened to gather funds and materials for our Spanish comrades to show the unwavering support offered to the CNT-FAI. At such an event, Travailleur delegate, Leon Blum, has delivered a powerful speech urging the government to press on its support for the Spaniard workers and peasants by uniting in an international people’s front against reactionaries and monarchists. This ‘Popular Front’ speech has been widely praised for its eloquence and solid socialist conviction. Monsieur Blum’s fame as a public speaker has certainly been improved."
+comfrance.22.d:0 "As civil war ravages the Iberian peninsula, stories of white terror storm across the Pyrenees, horrifying our populace. Throughout the Commune, spontaneous gatherings and congresses have convened to gather funds and materials for our Spanish comrades to show the unwavering support offered to the CNT-FAI. At such an event, Travailleur delegate, Leon Blum, has delivered a powerful speech urging the government to press on its support for the Spaniard workers and peasants by uniting in an international people's front against reactionaries and monarchists. This ‘Popular Front' speech has been widely praised for its eloquence and solid socialist conviction. Monsieur Blum's fame as a public speaker has certainly been improved."
 comfrance.22.a:0 "Most eloquent, camarade."
 
 comfrance.23.t:0 "A New 1871"
@@ -590,7 +590,7 @@ comfrance.24.a:0 "Aux armes, citoyens!"
 comfrance.25.t:0 "The Damocles Project?"
 comfrance.25.d:0 "Inspired by the Cambridge Conference which took place during the Second Congress of the Internationale, in May 1937, another somewhat secret reunion took place for the last weeks at the University of Cambridge. A group of theoretical physicists from Britain and France, led by Norman Feather, Frédéric Joliot-Curie and Francis Perrin, are discussing the possibilities of radioactivity and nuclear fission and its uses - from electricity generation and medical applications to powerful strategic weapons. The participants are requesting funding for the establishment of the 'Damocles Project', a joint British-French committee for nuclear research."
 comfrance.25.a:0 "Establish the Damocles Project!"
-comfrance.25.b:0 "We won’t waste money on such absurdity!"
+comfrance.25.b:0 "We won't waste money on such absurdity!"
 
 comfrance.26.t:0 "Establishment of the Damocles Project"
 comfrance.26.d:0 "The government of the Union of Britain has accepted our offer regarding the creation of the joint Damocles project. This grand undertaking will allow us to spread syndicalism to the entire world!"
@@ -951,7 +951,7 @@ comfrance.110.c:0 "Proletarios del mundo, uníos!"
 comfrance.110.e:0 "Proletários de todos os paí­ses, uni-vos!"
 comfrance.110.f:0 "Proletarii vsekh stran, sojedinjajtes!"
 comfrance.110.g:0 "Proletari di tutti i paesi, unitevi!"
-comfrance.110.h:0 "P’rolet’arebo q’vela kveq’nisa, sheertdit!"
+comfrance.110.h:0 "P'rolet'arebo q'vela kveq'nisa, sheertdit!"
 comfrance.110.i:0 "A lucht oibre an domhain, aontaígí!"
 
 comfrance.111.t:0 "Centroamérica announces her ambitions"
@@ -1174,7 +1174,7 @@ comfrance.155.c:0 "Anarchiste majority : Proletarian democracy does not require 
 comfrance.155.e:0 "Jacobin majority : The Commune is ready for Bolshevism."
 
 comfrance.156.t:0 "Communal Elections 1951"
-comfrance.156.d:0 "Thirty years have passed since the Commune of France was established. Our way to socialism and prosperity has been hard and long. Now, when the people choose the new government, our main goal is not only to develop Syndicalism, but also to protect 'des droits de l’homme et du citoyen', such as democracy and the right to happiness."
+comfrance.156.d:0 "Thirty years have passed since the Commune of France was established. Our way to socialism and prosperity has been hard and long. Now, when the people choose the new government, our main goal is not only to develop Syndicalism, but also to protect 'des droits de l'homme et du citoyen', such as democracy and the right to happiness."
 comfrance.156.a:0 "Travailleur majority - Democratisation of the Commune should be gradual"
 comfrance.156.b:0 "Sorelian majority - Totalism shall stand triumphant"
 comfrance.156.c:0 "Anarchiste majority - The stateless soceity awaits!"
