--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3148,7 +3148,7 @@ KTG_social_liberal_ADJ:0 "Katanga"
 KTG_social_liberal_DEF:0 "Katanga"
 KTG_market_liberal:0 "Katanga"
 KTG_market_liberal_ADJ:0 "Katanga"
-KTG_market_liberal_DEF:0 "Katanga""
+KTG_market_liberal_DEF:0 "Katanga"-"
 KTG_social_conservative:0 "Garanganze"
 KTG_social_conservative_ADJ:0 "Garanganzian
 KTG_social_conservative_DEF:0 "Garanganze"
