--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -83,7 +83,7 @@ battle_cruiser_pre_desc:0 "The first battlecruisers were designed in the United 
 battleship_pre:0 "Pre-Weltkrieg Battleship"
 battleship_pre_desc:0 "Considered by some to be a relic of a bygone era of naval warfare, by others as the most impressive ships ever built, no one can deny that these remnants of the battleship arms race constitute some of the most heavily armed and armoured vessels ever built."
 carrier_pre:0 "Pre-Weltkrieg Carrier"
-carrier_pre_desc:0 "These Escort Carriers and Seaplane Tenders were the predecessors of today’s aircraft carriers."
+carrier_pre_desc:0 "These Escort Carriers and Seaplane Tenders were the predecessors of today's aircraft carriers."
 
 ### Union of Britain ###
 ### Submarines ####
