--- a/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -174,7 +174,7 @@ bel.18.b:0 "We shall approach our Flemish brethren and try to reinstate Belgium.
 bel.19.t:0 "Flandres receives Walloon Deal"
 bel.19.d:0 "After the proposal to the German government has failed, the Flemish receive a deal from the Walloon movement. They ask the Flemish to work together with them to ensure Independence for all of Belgium and to reinstate the King."
 bel.19.a:0 "Flandres shall be Independent!"
-bel.19.b:0 ""Eendracht maakt Macht!""L'union fait la force!""Unity is Strength!""
+bel.19.b:0 "-"Eendracht maakt Macht!""L'union fait la force!""Unity is Strength!""
 bel.20.t:0 "Hainaut Attacks"
 bel.20.d:0 "After the Flemish and Walloons made their pact to unify Belgium, they launched an assault on the German Administration Offices in Mons and secured the governor and his family. They are now held hostage and are demanding retreat of German Forces out of Hainaut. We have surrounded the building and are ready to move in if necessary. The chances of extracting the governor successfully are slim but we could re-secure the building to reinforce it against further attacks."
 bel.20.a:0 "Launch an Assault on the building!"
@@ -191,7 +191,7 @@ bel.23.a:0 "We will not risk any more German blood."
 bel.23.b:0 "Dig in boys, its gonna be a though fight!"
 bel.24.t:0 "German forces return to Germany"
 bel.24.d:0 "On September 13th 1936 at 2:37 PM in the Royal Palace signs the former King Adalbert the Ceasefire resulting in his immediate abdication, the return of all German forces to Germany and a truce between the reborn nation of Belgium and the German Reich. Hundreds of thousands of men, women and children run into the streets waving the Belgian flag, chanting the Brabançonne and celebrating the regained independence. It truly is a great day for Belgium!"
-bel.24.a:0 ""Lang leve België!""Vive la Belgique!""Long live Belgium!""
+bel.24.a:0 "-"Lang leve België!""Vive la Belgique!""Long live Belgium!""
 bel.25.t:0 "Germans pushed back into Namur"
 bel.25.d:0 "After our defeat at Mons and in return for the governor we have fallen back into Namur where we dug ourselves in. Any Walloon resistance will have to deal with our position and prepared troops!"
 bel.25.a:0 "Watch out, those Walloons are everywhere!"
@@ -412,7 +412,7 @@ BEL_burgundian_circuit_desc:0 "Imperial people, wake up! By those words Léon De
 BEL_proclaim_thiois_empire:0 "Proclaim the Thiois Empire"
 BEL_proclaim_thiois_empire_desc:0 "Now that our main objectives are accomplished, we can finally get rid of our old name of Belgium to replace it with a new one which shows more clearly the power of our imperial union. Long live the Thiois Empire!"
 BEL_unite_dietsland:0 "Verenig Dietsland"
-BEL_unite_dietsland_desc:0 "A union of Dietsland is now possible. First we must reunite the borders of the United Kingdom of the Netherlands. Then we could strike at France in order to reverse the infamous war treaties of Sébastien of Vauban and Louis XIV and reunite the XVII provinces. It will work because as the motto says: "Strength makes Unity""
+BEL_unite_dietsland_desc:0 "A union of Dietsland is now possible. First we must reunite the borders of the United Kingdom of the Netherlands. Then we could strike at France in order to reverse the infamous war treaties of Sébastien of Vauban and Louis XIV and reunite the XVII provinces. It will work because as the motto says: "Strength makes Unity"-"
 BEL_proclaim_dietsche_rijk:0 "Proclaim the Dietsche Rijk"
 BEL_proclaim_dietsche_rijk_desc:0 "Now that our main objectives are accomplished, we can finally get rid of our old name of Belgium to replace it with a new one which shows more clearly the power of our imperial union. Long live the Dietsche Rijk!"
 BEL_fascist_youth_organizations:0 "Establish Fascist Youth Organizations"
@@ -422,7 +422,7 @@ BEL_colonial_claims_desc:0 "At the Berlin conference the true extend of Congo wa
 BEL_germany_millitary_coop:0 "Military Cooperation with Germany"
 BEL_germany_millitary_coop_desc:0 "With the rise of the national awakening in our country and our ideological closeness with Germany, we could establish a military cooperation with them."
 BEL_belgium_first:0 "God Protects Free Belgium and its King"
-BEL_belgium_first_desc:0 ""Dieu Protège la Libre Belgique et son Roi" comes from "Vers l'Avenir" (Towards the future), the rexist hymn. In it's name Rex was very royalist and Leopold III itself was not clearly against a strong executive. This "indecision" lead to the "royal question", the regency of the Prince Charles and the abdication of the king after the war."
+BEL_belgium_first_desc:0 "-"Dieu Protège la Libre Belgique et son Roi" comes from "Vers l'Avenir" (Towards the future), the rexist hymn. In it's name Rex was very royalist and Leopold III itself was not clearly against a strong executive. This "indecision" lead to the "royal question", the regency of the Prince Charles and the abdication of the king after the war."
 BEL_propaganda_ministry:0 "Establish Propaganda Ministry"
 BEL_propaganda_ministry_desc:0 "Propaganda is not about indoctrination... it's the best way to guide the people to the right path."
 BEL_communist_brigades:0 "Belgian Communist Brigades"
@@ -474,11 +474,11 @@ BEL_transform_the_congo2:0 "Invest in Colonial Manufacturing"
 BEL_transform_the_congo2_desc:0 "Even if Congo was mainly an exploitation colony, the colonial population and the quantity of minerals are important enough to begin the manufacturing process there before exportation."
 BEL_transform_the_congo3:0 "Increase Colonial Manufacturing"
 BEL_transform_the_congo3_desc:0 "Even if Congo was mainly an exploitation colony, the colonial population and the quantity of minerals are important enough to begin the manufacturing process there before exportation." 
-BEL_urbanize_wallonie:0 "Invest in the "Sillon Sambre et Meuse""
+BEL_urbanize_wallonie:0 "Invest in the "Sillon Sambre et Meuse"-"
 BEL_urbanize_wallonie_desc:0 "Wallonia was one of the most industrialized region in Europe since the beginning of the 19th century, the river Meuse and his tributary the Sambre are vital arteries that help to move industrial products through the country and then to the rest of Europe."
 BEL_invest_in_FN_Herstal:0 "Expand the "Fabrique Nationale" of Herstal"
 BEL_invest_in_FN_Herstal_desc:0 "The "Fabrique Nationale" and the "Fonderie Royale de Canons", both located in Herstal near Liège, are the most important parts of our military production. If we want to increase the number of guns produced, extensions of those factories are mandatory."
-BEL_invest_in_FRC_Herstal:0 "Expand the "Fonderie Nationale de Canons""
+BEL_invest_in_FRC_Herstal:0 "Expand the "Fonderie Nationale de Canons"-"
 BEL_invest_in_FRC_Herstal_desc:0 "The "Fabrique Nationale" and the "Fonderie Royale de Canons", both located in Herstal near Liège, are the most important parts of our military production. If we want to increase the number of guns produced, extensions of those factories are mandatory." 
 BEL_urban_projects_capital_industry:0 "Develop Brussels' Industries"
 BEL_urban_projects_capital_industry_desc:0 "With the new railways currently in contruction in and around Brussels, the economic potential of the city will be even more attractive to industries and services."  
