--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -44,7 +44,7 @@ GER_doctrine_fleet_in_beeing3_desc:0 "-"
 GER_doctrine_base_strike:0 "Listen to Patzig and Raeder"
 GER_doctrine_base_strike_desc:0 "Patzig and Raeder have, in close communication with Sperrle of the Luftwaffe, devised a type of naval strategy reliant on mobile air-bases through Aircraft carriers. These men are convinced that on the open sea, where there help can take days to arrive, ships can only be risked if they fight together as one group, called Operative Manövergruppen."
 GER_doctrine_base_strike2:0 "Naval Air Force Research"
-GER_doctrine_base_strike2_desc:0 ""
+GER_doctrine_base_strike2_desc:0 "-"
 GER_doctrine_base_strike3:0 "Extend Carrier Research"
 GER_doctrine_base_strike3_desc:0 "-"
 GER_doctrine_fleet1:0 "Modernise our Cruisers"
@@ -598,7 +598,7 @@ gerdom.94.d:0 "One of the first German colonies, Südwestafrika has proven espec
 gerdom.94.a:0 "Announce our commitment to African autonomy - if we win!"
 
 gerdom.95.t:0 "Afrikakorps - Deutsch-Ostafrika"
-gerdom.95.d:0 "The site of some of the most impressive and victorious battles fought by the German colonial army under von Lettow-Vorbeck during the Weltkrieg, Ostafrika with its capital of Dar-es-Salaam is seen by most as the jewel within the crown of the Reich’s African colonial empire. As such the German administration is thoroughly entrenched and cooperation with the natives run smoothly, resulting in a large turnout of volunteers for the new Schutztruppen."
+gerdom.95.d:0 "The site of some of the most impressive and victorious battles fought by the German colonial army under von Lettow-Vorbeck during the Weltkrieg, Ostafrika with its capital of Dar-es-Salaam is seen by most as the jewel within the crown of the Reich's African colonial empire. As such the German administration is thoroughly entrenched and cooperation with the natives run smoothly, resulting in a large turnout of volunteers for the new Schutztruppen."
 
 gerdom.96.t:0 "Afrikakorps - Deutsch-Kongo"
 gerdom.96.d:0 "Taken from the Belgian state after the Weltkrieg, the Congo occupies the heart of Central Africa and has been for the last decades of German administration been heavily militarised to secure the Reich's control over the province."
@@ -1007,7 +1007,7 @@ gerdom.101.d:0 "Right-wing circles have been calling for a crusade against Commu
 gerdom.101.a:0 "Gott erhalte Kaiser! Sieg wird unser sein!"
 
 gerdom.102.t:0 "Von Hammerstein-Equord Affair"
-gerdom.102.d:0 "A month before the elections, yet another scandal was revealed by the media. Die Gartenlaube, one of the newspapers owned by the DVLP chairman Alfred Hugenberg, reported that two daughters of Freiherr Kurt von Hammerstein-Equord, general and friend of influential Reichskriegsminister von Schleicher, were involved in shady dealings with syndicalist intelligence. Shortly afterwards, the Reichstag member Franz Seldte fanned the flames by asking why the Abwehr, run by von Schleicher's friend Ferdinand von Bredow, was not able to find out that the family of an associate of the state secretary on war was infiltrated by hostile intelligence. While general von Hammerstein-Equord resigned and publicly apologised for his daughter’s doings, the real question for von Schleicher was - should he pull strings to replace von Bredow and remove any further threats to his political career from that direction, and if yes - by whom?"
+gerdom.102.d:0 "A month before the elections, yet another scandal was revealed by the media. Die Gartenlaube, one of the newspapers owned by the DVLP chairman Alfred Hugenberg, reported that two daughters of Freiherr Kurt von Hammerstein-Equord, general and friend of influential Reichskriegsminister von Schleicher, were involved in shady dealings with syndicalist intelligence. Shortly afterwards, the Reichstag member Franz Seldte fanned the flames by asking why the Abwehr, run by von Schleicher's friend Ferdinand von Bredow, was not able to find out that the family of an associate of the state secretary on war was infiltrated by hostile intelligence. While general von Hammerstein-Equord resigned and publicly apologised for his daughter's doings, the real question for von Schleicher was - should he pull strings to replace von Bredow and remove any further threats to his political career from that direction, and if yes - by whom?"
 gerdom.102.a:0 "Irren ist menschlich!"
 gerdom.102.b:0 "Does somebody have Nicolai's number?"
 gerdom.102.c:0 "What was his name again? Kanaris?"
@@ -1044,10 +1044,10 @@ gerfla.8.t:0 "Tenth anniversary of von Tirpitz' death"
 gerfla.8.d:0 "Today is the tenth anniversary of the death of the Great Chancellor and Admiral Alfred von Tirpitz. As the eight Chancellor and Commander of the German Navy Tirpitz led the Kaiserreich out of the Ludendorff dictatorship, initiating the Golden Age that lasted through the Twenties until his death. \n\nAfter his death, his Deutsche Vaterlandspartei (German Fatherland party, DVLP), reformed into the Junker party it is today under their new leader, Alfred Hugenberg, opening the way for the von Papen's Deutschkonservative Partei (German Conservative Party, DKP). And while the Reich enjoyed prosperity under his reign, he also continued o hold off on fulfilling the Kaiser's Easter Promises from 1917, leaving us with some troubles in the past years. \n\nStill, his prestige is enormous, and the anniversary of his death has been accompanied by public demonstrations of respect all across the Empire."
 gerfla.8.a:0 "And what a giant he was!"
 
-### Mitteuropa Events ###
+### Mitteleuropa Events ###
 
 germit.1.t:0 "A German proposal"
-germit.1.d:0 "In light of the consequences of Black Monday, the German government has come up with a somewhat strange proposal. In order to meaningfully increase and simplify commerce and trade across Mitteleuropa, they propose that the German currency, the Mark, should become an accepted currency in all Mitteleuropean countries.\n\nIn many of Germanies 'subject partner' states, the currencies are tied to the Mark already, so the actual change would remain minimal. What should we answer to this proposal?"
+germit.1.d:0 "In light of the consequences of Black Monday, the German government has come up with a somewhat strange proposal. In order to meaningfully increase and simplify commerce and trade across Mitteleuropa, they propose that the German currency, the Mark, should become an accepted currency in all Mitteleuropan countries.\n\nIn many of Germanies 'subject partner' states, the currencies are tied to the Mark already, so the actual change would remain minimal. What should we answer to this proposal?"
 germit.1.a:0 "Count us in!"
 germit.1.b:0 "'Subject partner', eh?"
 germit.1.c:0 "Oh blimey, surely not!"
