--- a/localisation/KR_Indochinese_Union_l_english.yml
+++ b/localisation/KR_Indochinese_Union_l_english.yml
@@ -36,7 +36,7 @@ INC_ImperialistScum:0 "Damn those German Imperialist Scum!"
 
 ### Events ###
 viet.0.t:0 "Unrest and Sedition in Indochina"
-viet.0.d:0 "Our control with Indochina has never been very strong, but recently our colonial officers report a stark rise in guerrilla attacks on our schutztruppen and strikes organised by the local trade unions. As if that wasn’t enough, intelligence suggests the recently reunited Indian sub-continent as the source of much of the rebellious natives resources and weapons."
+viet.0.d:0 "Our control with Indochina has never been very strong, but recently our colonial officers report a stark rise in guerrilla attacks on our schutztruppen and strikes organised by the local trade unions. As if that wasn't enough, intelligence suggests the recently reunited Indian sub-continent as the source of much of the rebellious natives resources and weapons."
 viet.0.a:0 "This colony has been nothing but trouble!"
 viet.1.t:0 "Ho Chi Minh Proclaims Indochina Independent!"
 viet.1.d:0 "Our control with Indochina has never been very strong, but recently our colonial officers report a stark rise in guerrilla attacks on our schutztruppen and strikes organised by the local trade unions. From his exile in Calcutta, Ho Chi Minh has proclaimed Indochina to be an independent federal socialist republic! This would seem to be the signal for all out rebellion, we must be vigilant!"
@@ -71,7 +71,7 @@ viet.9.t:0 "Major Victory"
 viet.9.d:0 "We have now complete control over German Indochina. Now, we can finally create an independent People's Republic!"
 viet.9.a:0 "Excellent!"
 viet.10.t:0 "The Indochinese Revolt Succeeds"
-viet.10.d:0 "With the selfless help of our brave volunteers, the peoples of Indochina have finally thrown of the yoke of colonial exploitation! This is a great day for all the socialist nations of the world! Ho Chi Minh’s stern, but emotional voice echoes from every radio across the free world, broadcasting the news that every people has a right to self-determination!"
+viet.10.d:0 "With the selfless help of our brave volunteers, the peoples of Indochina have finally thrown of the yoke of colonial exploitation! This is a great day for all the socialist nations of the world! Ho Chi Minh's stern, but emotional voice echoes from every radio across the free world, broadcasting the news that every people has a right to self-determination!"
 viet.10.a:0 "Bring the Indochinese Republic into our alliance!"
 viet.10.b:0 "Congratulate them warmly and leave them to their own affairs."
 viet.11.t:0 "Victory in Indochina"
@@ -86,7 +86,7 @@ viet.13.a:0 "That's exactly what we're expecting..."
 viet.13.b:0 "Onwards, to liberty!"
 viet.13.c:0 "Crush those rebels!"
 viet.14.t:0 "The Indochinese Revolt Succeeds"
-viet.14.d:0 "With the selfless act of the Vietminh troops, the peoples of Indochina have finally thrown of the yoke of colonial exploitation! This is a great day for all the socialist nations of the world! Ho Chi Minh’s stern, with his emotional voice echoes from every radio across the free world, broadcasting the news that every people has a right to self-determination!"
+viet.14.d:0 "With the selfless act of the Vietminh troops, the peoples of Indochina have finally thrown of the yoke of colonial exploitation! This is a great day for all the socialist nations of the world! Ho Chi Minh's stern, with his emotional voice echoes from every radio across the free world, broadcasting the news that every people has a right to self-determination!"
 viet.14.a:0 "Another nail in the imperialism coffin"
 viet.14.b:0 "Excellent!"
 viet.14.c:0 "Fall back!"
