--- a/localisation/KR_Italy_l_english.yml
+++ b/localisation/KR_Italy_l_english.yml
@@ -213,7 +213,7 @@ ITA_Art_Funding_desc:0 "Let the government patronise some of the most promising 
 ITA_Encyclical_Corruption:0 "Encyclical Against Corruption"
 ITA_Encyclical_Corruption_desc:0 "Pope Pius XII intends to issue a new encyclical, one aimed at corruption - both in the soul and within the government. It offers guidance to a nation struggling with finding its path."
 ITA_Safe_Haven:0 "Haven for the Faithful"
-ITA_Safe_Haven_desc:0 "With the radical and totalitarian movements gaining power throughout the world, great scientists are at risk of persecution. Let´s make sure Italy is the place they can and will emigrate into."
+ITA_Safe_Haven_desc:0 "With the radical and totalitarian movements gaining power throughout the world, great scientists are at risk of persecution. Let's make sure Italy is the place they can and will emigrate into."
 ITA_Defenders_Faith:0 "Defenders of the Faith"
 ITA_Defenders_Faith_desc:0 "The time has come for Italy to take on its role as the defender of God and virtue, and for the people to rise up to its service."
 ITA_Centralise1:0 "Centralise the State"
