--- a/localisation/KR_Japan_Foreign_l_english.yml
+++ b/localisation/KR_Japan_Foreign_l_english.yml
@@ -56,7 +56,7 @@ JAP_SUN_HAW_annex_desc:0 "Now that the American position in the pacific is weake
 
 ### Events ###
 japfor.1.t:0 "Mantetsu Declares Record Earnings"
-japfor.1.d:0 "After the conclusion of the last phase of the Chinese Civil Wars in 1928, and Japan’s intervention to protect its sphere of influence against German encroachment, the Zhang Zuolin's Fengtian Clique proclaimed itself an independent republican government with sole legitimate rule of all China. Following the promulgation of an Imperial Ordinance ordering “the development of Fengtian into an independent nation possessing indivisible relations with the Japanese Empire" a year later, the Manchurian economy was gradually influenced with an intent to strengthen control over its government and prepare it to support the Imperial war machine. As a result, Japan maintains a great deal of influence over Fengtian, further reinforced by garrisons and an occupation zone. \n\n The core of Japanese efforts was the South Manchuria Railway Company, or “Mantetsu” for short, which had already been operating in Manchuria since 1906. While a powerful symbol of Japanese interests in China prior to the intervention, the company has since become responsible for developing and exploiting virtually every important aspect of the Manchurian economy, propelling Manchuria to become Japan’s primary source of coal and steel, as well as the producer of over half the world’s soybean supply. Today, Mantetsu has announced its highest profits to date."
+japfor.1.d:0 "After the conclusion of the last phase of the Chinese Civil Wars in 1928, and Japan's intervention to protect its sphere of influence against German encroachment, the Zhang Zuolin's Fengtian Clique proclaimed itself an independent republican government with sole legitimate rule of all China. Following the promulgation of an Imperial Ordinance ordering “the development of Fengtian into an independent nation possessing indivisible relations with the Japanese Empire" a year later, the Manchurian economy was gradually influenced with an intent to strengthen control over its government and prepare it to support the Imperial war machine. As a result, Japan maintains a great deal of influence over Fengtian, further reinforced by garrisons and an occupation zone. \n\n The core of Japanese efforts was the South Manchuria Railway Company, or “Mantetsu” for short, which had already been operating in Manchuria since 1906. While a powerful symbol of Japanese interests in China prior to the intervention, the company has since become responsible for developing and exploiting virtually every important aspect of the Manchurian economy, propelling Manchuria to become Japan's primary source of coal and steel, as well as the producer of over half the world's soybean supply. Today, Mantetsu has announced its highest profits to date."
 japfor.1.a:0 "Great!"
 
 japfor.2.t:0 "Economic Exploitation of Fengtian is no longer possible"
@@ -113,7 +113,7 @@ japfor.11.b:0 "This is offer is not worth the paper it is written on!"
 
 japfor.12.t:0 "Compromise"
 japfor.12.d:0 "The Germans have offered both sides a compromise: we give our portion of Inner Mongolia to the Japanese in exchange for peace and, afterwards, we sign a Non-Aggression Pact to ensure peace in the future."
-japfor.12.a:0 "One worthless state in exchange for peace? It’s a deal!"
+japfor.12.a:0 "One worthless state in exchange for peace? It's a deal!"
 japfor.12.b:0 "We won't give them an inch!"
 
 japfor.13.t:0 "The Qing Empire accepts the Compromise"
@@ -370,7 +370,7 @@ japfor.69.t:0 "Korea asks for Aid"
 japfor.69.d:0 "The Korean government-in-exile has approached the German government for military and political aid in retaking their lands from Japan. This would cause much grief to the Japanese should we go to war with them, but it might also cause other problems for us should Korea jump the guns."
 japfor.69.a:0 "A great place to drop left over equipment."
 japfor.69.b:0 "Full support and aid shall be given."
-japfor.69.c:0 "We’re not interested."
+japfor.69.c:0 "We're not interested."
 
 japfor.70.d:0 "The Korean government in exile has asked us for military and political aid against Japan. It might be wise to send them aid to keep the Japanese off balanced. But it could mean that Japan comes for us sooner rather than later."
 
@@ -381,16 +381,16 @@ japfor.73.a:0 "Keep our eyes and ear open"
 japfor.74.t:0 "Rise of Korean Nationalism in Transamur"
 japfor.74.d:0 "The Korean independence movement is spreading in Transamur using the large existing Korean minority and could pose a future problem if it is not contained..."
 japfor.74.a:0 "Push Kolchak for a crackdown."
-japfor.74.b:0 "Let it be. They can’t push us out."
+japfor.74.b:0 "Let it be. They can't push us out."
 
 japfor.751.t:0 "Japanese Pressure"
-japfor.751.d:0 "The rise of Korean nationalism in our state has made Japan a bit nervous and they are insisting that we crack down on this fledgling movement. Failure to do so could draw Japan’s ire, but such measures will make the people restless, especially our middle class which contains a great number of Koreans."
+japfor.751.d:0 "The rise of Korean nationalism in our state has made Japan a bit nervous and they are insisting that we crack down on this fledgling movement. Failure to do so could draw Japan's ire, but such measures will make the people restless, especially our middle class which contains a great number of Koreans."
 japfor.751.a:0 "We have no choice..."
 japfor.751.b:0 "Just arrest the agitators."
 japfor.751.c:0 "We refuse."
 
 japfor.75.t:0 "Transamur refuses our Demand!"
-japfor.75.d:0 "Our demand for a crackdown was refused, and members of the government are taken aback by this blatant disrespect for our nation’s security by our supposed younger ally, who we have protected for so long. How do we answer this insubordination?"
+japfor.75.d:0 "Our demand for a crackdown was refused, and members of the government are taken aback by this blatant disrespect for our nation's security by our supposed younger ally, who we have protected for so long. How do we answer this insubordination?"
 japfor.75.a:0 "Respect their independence."
 japfor.75.b:0 "We will do it ourselves."
 japfor.75.c:0 "How dare they, send in the troops!"
@@ -606,7 +606,7 @@ japfor.132.a:0 "Damn!"
 japfor.133.t:0 "A New Alliance?"
 japfor.133.d:0 "Recent cooperation with Russian state in the conquest of Mongolia proved the dramatic resurrection of the Russian armed forces. Conquest of Siberia would be extremely difficult if we are to face this united and strong Russian army, fighting on its own soil. Perhaps we should use this change in relations as signal to re-orientate our expansions towards safer goals, such as fragmented China or the unstable pacific. And, perhaps we could try and bring belligerent Russia, whose ambitions are clearly aimed against German hegemony in Pacific and Europe, into our block in order to secure our northern flank."
 japfor.133.a:0 "Try to invite Russia into our alliance!"
-japfor.133.b:0 "We don’t need them!"
+japfor.133.b:0 "We don't need them!"
 
 japfor.134.t:0 "An Alliance with Japan?"
 japfor.134.d:0 "Recent cooperation with Japan in the conquest of Mongolia greatly strengthened mutual relations between two great nations. Japan decided to offer us participation in their alliance bloc, which is clearly aimed against German dominance in the Pacific and Asia, and want to form an alliance with us. How we shall respond?"
