--- a/localisation/KR_Japan_l_english.yml
+++ b/localisation/KR_Japan_l_english.yml
@@ -238,11 +238,11 @@ japdom.15.d:0 "The Japanese government has found itself effectively paralysed. T
 japdom.15.a:0 "The future of Japan lies in his choice."
 
 japdom.16.t:0 "Japan's Longest Day"
-japdom.16.d:0 "After ten years of political disgrace, the army has taken power again, this time by a coup d’état. Ultraconservative politician Baron Hiranuma Kiichiro is now Prime Minister, and a state of martial law has been enacted across all of the Greater Japanese Empire."
+japdom.16.d:0 "After ten years of political disgrace, the army has taken power again, this time by a coup d'état. Ultraconservative politician Baron Hiranuma Kiichiro is now Prime Minister, and a state of martial law has been enacted across all of the Greater Japanese Empire."
 japdom.16.a:0 "Banzai!"
 
 japdom.17.t:0 "Failed coup attempt"
-japdom.17.d:0 "Even through the Army Minister refused to support the coup, he made no effort to stop the plot. The plotters interpreted this as a signal of permission, and proceeded. This morning, the coup forces seized the Metropolitan Police Headquarters, the Prime Minister's Residence, and the new Imperial Diet Building, but failed to occupy the Imperial Palace. To the surprise of the plotters, the Emperor resisted the coup d’état and issued an imperial command to suppress the rebels, sealing their fate. The coup forces surrendered without resistance and key conspirators were quickly caught, while some took their own lives before they could be arrested. One of them, General Terauchi Hisaichi, committed suicide by seppuku today."
+japdom.17.d:0 "Even through the Army Minister refused to support the coup, he made no effort to stop the plot. The plotters interpreted this as a signal of permission, and proceeded. This morning, the coup forces seized the Metropolitan Police Headquarters, the Prime Minister's Residence, and the new Imperial Diet Building, but failed to occupy the Imperial Palace. To the surprise of the plotters, the Emperor resisted the coup d'état and issued an imperial command to suppress the rebels, sealing their fate. The coup forces surrendered without resistance and key conspirators were quickly caught, while some took their own lives before they could be arrested. One of them, General Terauchi Hisaichi, committed suicide by seppuku today."
 japdom.17.a:0 "Democracy has prevailed!"
 
 japdom.18.t:0 "The Power Struggle"
@@ -250,11 +250,11 @@ japdom.18.d:0 "Restorationist officers were the main participants of the coup th
 japdom.18.a:0 "Will this ever end?"
 
 japdom.19.t:0 "The Ishinha Counter-Coup"
-japdom.19.d:0 "Earlier today Restorationist junior officers from units in the Tokyo area have staged a new coup d’état! In the early morning, 1,400 officers and enlisted soldiers embarked on missions to seize control of key communications and administrative facilities. The Army Ministry, the General Staff Office, the Metropolitan Police Headquarters, the Prime Minister's Official Residence, and the Imperial Diet Building were all quickly captured, and the Imperial Palace went under siege. In the afternoon the emperor himself addressed the soldiers announcing his official support of their revolution."
+japdom.19.d:0 "Earlier today Restorationist junior officers from units in the Tokyo area have staged a new coup d'état! In the early morning, 1,400 officers and enlisted soldiers embarked on missions to seize control of key communications and administrative facilities. The Army Ministry, the General Staff Office, the Metropolitan Police Headquarters, the Prime Minister's Official Residence, and the Imperial Diet Building were all quickly captured, and the Imperial Palace went under siege. In the afternoon the emperor himself addressed the soldiers announcing his official support of their revolution."
 japdom.19.a:0 "The coup is successful!"
 
 japdom.20.t:0 "Restorationist Coup Attempt!"
-japdom.20.d:0 "Earlier today Restorationist junior officers from units in the Tokyo area have staged a new coup d’état! In the early morning, 1,400 officers and enlisted soldiers embarked on missions to seize control of key communications and administrative facilities. The Army Ministry, the General Staff Office, the Metropolitan Police Headquarters, the Prime Minister's Official Residence, and the Imperial Diet Building were all quickly captured, and the Imperial Palace went under siege. After the emperor explicitly denounced the putschists the navy mobilised marine divisions to rescue the palace, and by the evening the coup was crushed."
+japdom.20.d:0 "Earlier today Restorationist junior officers from units in the Tokyo area have staged a new coup d'état! In the early morning, 1,400 officers and enlisted soldiers embarked on missions to seize control of key communications and administrative facilities. The Army Ministry, the General Staff Office, the Metropolitan Police Headquarters, the Prime Minister's Official Residence, and the Imperial Diet Building were all quickly captured, and the Imperial Palace went under siege. After the emperor explicitly denounced the putschists the navy mobilised marine divisions to rescue the palace, and by the evening the coup was crushed."
 japdom.20.a:0 "Thank god for the navy!"
 
 japdom.21.t:0 "The Centralists Win!"
