--- a/localisation/KR_La_Plata_l_english.yml
+++ b/localisation/KR_La_Plata_l_english.yml
@@ -29,7 +29,7 @@ ARG_chile_fate:0 "The Fate of Chile"
 ARG_bolivia_claim_desc:0 "Bolivia has no foundation as a nation state, it's very name is that of a foreigner, its borders a fabrication. Upper Peru will come back to the fold.
 ARG_bolivia_claim:0 "Claim Upper Peru"
 ARG_bolivia_fortify_chaco:0 "Fortify the Chaco"
-ARG_bolivia_fortify_chaco_desc:0 "Our recent conquest of the Chaco will be fleeting if we don’t fortify it against a Bolivian counterattack, especially now that our opinions on their 'independence' are crystal clear"
+ARG_bolivia_fortify_chaco_desc:0 "Our recent conquest of the Chaco will be fleeting if we don't fortify it against a Bolivian counterattack, especially now that our opinions on their 'independence' are crystal clear"
 ARG_bolivia_fortify_jujuy:0 "Andes Perimeter"
 ARG_bolivia_fortify_jujuy_desc:0 "With the help of the Andes and surrounding terrain, let us make an unbreakable perimeter that the Bolivians will be unable to move through, by manning the mountains with crack specialist divisions"
 ARG_bol_pru_ally:0 "Propose Alliance with Peru"
@@ -65,7 +65,7 @@ ARG_malvinas_integrate_desc:0 "Since we seized the islands from the crumbing Bri
 ARG_malvinas_deport:0 "Deport Kelpers to Patagonia"
 ARG_malvinas_deport_desc:0 "The so called Kelpers are nought but spies, who dream of returning to British Rule. Let us confiscate their lands and allow them to move elsewhere in the Union, perhaps even abroad; anywhere but the Malvinas"
 ARG_malvinas_citizenship:0 "Citizenship for Kelpers"
-ARG_malvinas_citizenship_desc:0 "The Kelpers are not much of a threat to us, and many don’t resent us that greatly, given how the Union shields them from Syndicalist and German rule. If we offer them citizenship, and make the Malvinas a full member of the union, we will be able to make our presence permanent. They can call the place Falklands if they wish so, for its La Plata's flag that is at the mast in Puerto Argentino"
+ARG_malvinas_citizenship_desc:0 "The Kelpers are not much of a threat to us, and many don't resent us that greatly, given how the Union shields them from Syndicalist and German rule. If we offer them citizenship, and make the Malvinas a full member of the union, we will be able to make our presence permanent. They can call the place Falklands if they wish so, for its La Plata's flag that is at the mast in Puerto Argentino"
 ARG_malvinas_develop:0 "Develop the Malvinas"
 ARG_malvinas_develop_desc:0 "The islands are still very much a barren wasteland, with nought but sheep and mountains mostly. Let us invest there, and make sure immigrants arrive in Puerto Argentino in ever greater numbers"
 ARG_malvinas_mine:0 "Natural Resources of the Malvinas"
@@ -107,7 +107,7 @@ ARG_motorized_desc:0 "Mobility is the future of warfare, or so armchair generals
 ARG_meca:0 "A Mechanised Army"
 ARG_meca_desc:0 "More than merely transporting infantry, our vehicles should be able to hold their ground and defend themselves efficiently"
 ARG_armor:0 "Armoured Divisions"
-ARG_armor_desc:0 "Tanks were seen as a novelty by many. They were largely ineffective in the Platine War when used by Bolivia. But then again, what isn’t ineffective when used by Bolivia? The future of warfare lies in armoured divisions who can quickly encircle our enemies"
+ARG_armor_desc:0 "Tanks were seen as a novelty by many. They were largely ineffective in the Platine War when used by Bolivia. But then again, what isn't ineffective when used by Bolivia? The future of warfare lies in armoured divisions who can quickly encircle our enemies"
 ARG_armor_heavy:0 "Heavy Armoured Spearheads"
 ARG_armor_heavy_desc:0 "When it comes to our armoured divisions, more is better. Let us make heavy models which will ensure that our divisions can scoff at any attempt at stopping them with brute force"
 ARG_heavy_effort:0 "Re-Armament Effort"
@@ -131,7 +131,7 @@ ARG_air_supermacy_desc:0 "If we are to revive the Virreinato, we need to control
 ARG_dive_bombing:0 "Dive Bombing Squads"
 ARG_dive_bombing_desc:0 "The idea of a bomber that can closely support our land divisions is certainly new and risky, but it's one with great potential"
 ARG_strat_bombing:0 "Strategic Bombing"
-ARG_strat_bombing_desc:0 "In order to win our war, we will need to cripple our enemy’s industrial capacity. The most efficient way to do this is with long range bombers"
+ARG_strat_bombing_desc:0 "In order to win our war, we will need to cripple our enemy's industrial capacity. The most efficient way to do this is with long range bombers"
 ARG_secret_bombs:0 "Secret Projects"
 ARG_secret_bombs_desc:0 "Many of our scientists, mainly European exiles, speak of the new advances in physics that would allow us to make bombs of unimaginable power. They request large amounts of funding; would it be worth it?"
 ARG_radio:0 "Air-Sea Cooperation"
@@ -143,7 +143,7 @@ ARG_cruiser_escort_desc:0 "Cruisers are vital to keep our battleships safe, and 
 ARG_battleship:0 "Improvements in Battleship Technology"
 ARG_battleship_desc:0 "Since the Weltkrieg, battleships have been greatly improved. Our current models could perhaps pass as antiques in Willemshaven!"
 ARG_docks:0 "Additional Dockyards for Navy Use"
-ARG_docks_desc:0 "Our naval expansion plans will be just plans if we don’t have enough facilities to produce new warships"
+ARG_docks_desc:0 "Our naval expansion plans will be just plans if we don't have enough facilities to produce new warships"
 ARG_bases:0 "Naval Base Expansion"
 ARG_bases_desc:0 "Expanding the bases from where our fleets can strike should be our utmost priority"
 ARG_forts:0 "Coastal Defences"
@@ -181,18 +181,18 @@ arg.1.d:0 "It's seems history does repeat itself, for Platine forces have utterl
 arg.1.a:0 "Sue for peace!"
 arg.1.b:0 "We will keep the war going!"
 arg.2.t:0 "La Plata in 1936"
-arg.2.d:0 "From 1880 Argentina enjoyed a period of economic boom and great prosperity based on the export of wheat and cattle, allowing the nation to achieve a moderate industrialisation, however, this period was ended abruptly with onset of the Great Depression in 1933. With unemployment rising rapidly and many export traders going bust Argentina fell into turmoil from which emerged a strong military cabinet, who seized control of the government in a coup with a pledge to end Argentina’s economic hardships and establish the nation firmly on the international stage. Argentina went to war with Bolivia in 1933, ostensibly over the attempted Bolivian annexation of Paraguay, which marked the beginning of the ‘Great South American War’. In 1934 Argentinean troops won a series of victories against the Bolivian forces and easily evicted them from occupied Paraguay, but in response Brazil declared war on Argentina, and her armed forces a rapid advance to the La Plata river, overrunning the tiny nation of Uruguay in the process. However, the Brazilian advance was halted at the La Plata as the war got bogged down in trench systems. In late 1934, Argentinean forces inflicted a further another series of devastating defeats on the Bolivians, and Bolivia was forced to sue for peace before the close of the year. This victory meant that Argentina was free to focus on Brazil, and they began a counter-attack in 1935, which succeeded in routing the Brazilian troops and ejecting them into Curitiba. With her home lands threatened and her forces in disarray Brazil sued for peace. Shortly after this great success the governments of Paraguay and Uruguay were ‘federated’ with Argentina, creating the Union of La Plata. In 1936, La Plata is still facing problems, not least that the people of Paraguay and Uruguay don’t feel any connection to the Union and nationalism is ripe. Also, an already resurgent Bolivia has begun to rearm, and Brazil’s currently weak government looks set to give way to a landslide victory by Getulio Vargas’ progressives. Can La Plata stay intact in the face of her so quickly resurgent foes?"
+arg.2.d:0 "From 1880 Argentina enjoyed a period of economic boom and great prosperity based on the export of wheat and cattle, allowing the nation to achieve a moderate industrialisation, however, this period was ended abruptly with onset of the Great Depression in 1933. With unemployment rising rapidly and many export traders going bust Argentina fell into turmoil from which emerged a strong military cabinet, who seized control of the government in a coup with a pledge to end Argentina's economic hardships and establish the nation firmly on the international stage. Argentina went to war with Bolivia in 1933, ostensibly over the attempted Bolivian annexation of Paraguay, which marked the beginning of the ‘Great South American War'. In 1934 Argentinean troops won a series of victories against the Bolivian forces and easily evicted them from occupied Paraguay, but in response Brazil declared war on Argentina, and her armed forces a rapid advance to the La Plata river, overrunning the tiny nation of Uruguay in the process. However, the Brazilian advance was halted at the La Plata as the war got bogged down in trench systems. In late 1934, Argentinean forces inflicted a further another series of devastating defeats on the Bolivians, and Bolivia was forced to sue for peace before the close of the year. This victory meant that Argentina was free to focus on Brazil, and they began a counter-attack in 1935, which succeeded in routing the Brazilian troops and ejecting them into Curitiba. With her home lands threatened and her forces in disarray Brazil sued for peace. Shortly after this great success the governments of Paraguay and Uruguay were ‘federated' with Argentina, creating the Union of La Plata. In 1936, La Plata is still facing problems, not least that the people of Paraguay and Uruguay don't feel any connection to the Union and nationalism is ripe. Also, an already resurgent Bolivia has begun to rearm, and Brazil's currently weak government looks set to give way to a landslide victory by Getulio Vargas' progressives. Can La Plata stay intact in the face of her so quickly resurgent foes?"
 arg.2.a:0 "We live in a golden age! What could go wrong?"
 arg.3.t:0 "President Justo has died!"
 arg.3.d:0 "Our great leader has died today! General Agustín Pedro Justo, president of Argentina since 1933 and dictator of the Union of La Plata since her formation, has passed away peacefully during his sleep. During the first few hours after the event, a power vacuum ensued. This moment may be seized both by Justo's own supporters on the government, who are trying to setup a stable transitional government; and also by his rivals on the army, who will instead attempt a new military coup."
 arg.3.a:0 "Ramón Castillo forms a provisional government"
 arg.3.b:0 "Pedro Pablo Ramirez and Eldemiro Farrel launch a coup"
 arg.4.t:0 "The Plaza de Mayo Riots"
-arg.4.d:0 "While Ramón Castillo was forming his provisional government, the people of Buenos Aires started to gather in front of the Casa Rosada. As the death of Justo was formally announced, the crowd exploded. The police weren’t able to control the increasing violence, which ranged from loud discussions to gunfire. As the riot spread from the Plaza de Mayo across downtown Buenos Aires, it became clear there wouldn't be an easy way out of this situation..."
+arg.4.d:0 "While Ramón Castillo was forming his provisional government, the people of Buenos Aires started to gather in front of the Casa Rosada. As the death of Justo was formally announced, the crowd exploded. The police weren't able to control the increasing violence, which ranged from loud discussions to gunfire. As the riot spread from the Plaza de Mayo across downtown Buenos Aires, it became clear there wouldn't be an easy way out of this situation..."
 arg.4.a:0 "We will survive the storm, deploy the Presidential Guard"
 arg.4.b:0 "The military steps in and represses the rioters"
 arg.5.t:0 "The Plaza de Mayo Riots"
-arg.5.d:0 "While Ramirez and Farrel were marching their garrison towards the Casa Rosada, the people of Buenos Aires started to gather on the Plaza de Mayo. As the death of Justo was formally announced by acting-president Ramón Castillo, the crowd exploded. The police weren’t able to control the increasing violence, which ranged from loud discussions to gunfire. As the riot spread from the Plaza de Mayo across downtown Buenos Aires, it became clear there wouldn't be an easy way out of this situation..."
+arg.5.d:0 "While Ramirez and Farrel were marching their garrison towards the Casa Rosada, the people of Buenos Aires started to gather on the Plaza de Mayo. As the death of Justo was formally announced by acting-president Ramón Castillo, the crowd exploded. The police weren't able to control the increasing violence, which ranged from loud discussions to gunfire. As the riot spread from the Plaza de Mayo across downtown Buenos Aires, it became clear there wouldn't be an easy way out of this situation..."
 arg.5.a:0 "March towards the Casa Rosada"
 arg.5.b:0 "Recall the troops, let the civilians form a transitional government"
 arg.6.t:0 "The Presidential Guard disperses the rioters"
