--- a/localisation/KR_Libya_l_english.yml
+++ b/localisation/KR_Libya_l_english.yml
@@ -1,15 +1,5 @@
 ﻿l_english:
 
-### Opinion Modifiers ###
-
-### Tooltips ###
-
-### Ideas ###
-
-### Parties ###
-
-### Focuses ###
-
 ### Events ###
 
 libya.1.t:0 "Vilayet of Tripolitania"
@@ -22,12 +12,12 @@ libya.2.a:0 "Declare complete independence from the Ottomans!"
 libya.2.b:0 "Time is not right!"
 
 libya.3.t:0 "Tripolitania declares independence"
-libya.3.d:0 "For many years, we have ruled over Tripolitania. But today, with our country engaged in a lenghty conflict, Tripolitania decided to use this opportunity to break from our dominance. How should we react to this mess?"
+libya.3.d:0 "For many years, we have ruled over Tripolitania. But today, with our country engaged in a lengthy conflict, Tripolitania decided to use this opportunity to break from our dominance. How should we react to this mess?"
 libya.3.a:0 "Blasphemy! Crush this upstart!"
 libya.3.b:0 "Let them go"
 
 libya.4.t:0 "Libya still exists!"
-libya.4.d:0 "Even the concentration of our elite armed forces could not break apart the rebellious state of Libya. Some members of the general staff suggest that continuing with this fruitless effort greatly weakens our forces facing the hostile Arabian states of Hashemite Arabia and Egypt. Shall we recognize the independence of Libya?"
+libya.4.d:0 "Even the concentration of our elite armed forces could not break apart the rebellious state of Libya. Some members of the general staff suggest that continuing with this fruitless effort greatly weakens our forces facing the hostile Arabian states of Hashemite Arabia and Egypt. Shall we recognise the independence of Libya?"
 libya.4.a:0 "Accept their independence..."
 libya.4.b:0 "Never!"
 
