--- a/localisation/KR_Loading_Tips_l_english.yml
+++ b/localisation/KR_Loading_Tips_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 LOADING_TIP_0:0 "In a word: We want to put no one into the shade, but we claim our place in the sun as well. \n- German Foreign Minister Bernhard von Bülow, 6 December 1897"
 LOADING_TIP_1:0 "Despite the fact that we have no such fleet as we should have, we conquered for ourselves a place in the sun. \n- Kaiser Wilhelm II"
-LOADING_TIP_2:0 "My 'Share Our Wealth' program is the only defence this country’s got against Syndicalism. \n- Huey Long"
+LOADING_TIP_2:0 "My 'Share Our Wealth' program is the only defence this country's got against Syndicalism. \n- Huey Long"
 LOADING_TIP_3:0 "'Pax Christi in Regno Christi' (The Peace of Christ in the Kingdom of Christ) \n- Pius XI"
 LOADING_TIP_4:0 "Our aim is the creation in our country of a society of free and equal man, where no man will ever exploit another man. \n- Palmiro Togliatti"
 LOADING_TIP_5:0 "Together in Britain we have lit a flame that the ages shall not extinguish. \n- Oswald Mosley"
@@ -13,7 +13,7 @@ LOADING_TIP_10:0 "Conscription if necessary, but not necessarily conscription. \
 LOADING_TIP_11:0 "I look upon him as the greatest criminal known for having plunged the world into war. \n- King George V on his cousin, Kaiser Wilhelm II"
 LOADING_TIP_12:0 "After I am dead, the boy will ruin himself in twelve months. \n- attributed to George V of United Kingdom about his son Edward, Prince of Wales"
 LOADING_TIP_13:0 "I would like to see the word nationalisation banned from the socialist vocabulary. \n- Philip Snowden"
-LOADING_TIP_14:0 "Ah, goddamit, it’s time to put an end to this, We've moaned and suffered long enough, No half-way war, No more cowardly pity, Death to the bourgeoisie! \n-Sébastien Faure, La Ravachole"
+LOADING_TIP_14:0 "Ah, goddamit, it's time to put an end to this, We've moaned and suffered long enough, No half-way war, No more cowardly pity, Death to the bourgeoisie! \n-Sébastien Faure, La Ravachole"
 LOADING_TIP_15:0 "The old world is dying away, and the new world struggles to come forth - now is the time of monsters. \n- Antonio Gramsci"
 LOADING_TIP_16:0 "We, who are Socialists, must hope that out of this horror of bloodshed and dire destruction will come far-reaching social changes. \n- Jack Reed, 1914"
 LOADING_TIP_17:0 "The United States must be neutral in fact as well as in name...We must be impartial in thought as well as in action. \n- Woodrow Wilson, 19 August 1914"
@@ -45,7 +45,7 @@ LOADING_TIP_42:0 "Freedom means Freedom for the Group, not Freedom for the Indiv
 LOADING_TIP_43:0 "When the white man turns tyrant, it is his own freedom that he destroys. He becomes a... posing dummy, the shallow figure of a sahib... He wears a mask, and his face grows to fit it. \n- Eric Blair"
 LOADING_TIP_44:0 "Le Prussianisme - voila l'ennemi! \n- Joseph Conrad"
 LOADING_TIP_45:0 "The whole of the Balkans is not worth the bones of a single Pomeranian grenadier. \n- Otto von Bismarck"
-LOADING_TIP_46:0 "Don’t you dare let them put me in Westminster Abbey. \n- John McLean"
+LOADING_TIP_46:0 "Don't you dare let them put me in Westminster Abbey. \n- John McLean"
 LOADING_TIP_47:0 "Politics is a gentleman's game. \n- Muhammed Ali Jinnah"
 LOADING_TIP_48:0 "To rebellion! Rise up, brothers, against all government, destroy the power of the bourgeoisie! \n- Nestor Makhno"
 LOADING_TIP_49:0 "Names and individuals are unimportant when Germany's final fate is at stake. \n- Franz von Papen"
