--- a/localisation/KR_Mittelafrika_l_english.yml
+++ b/localisation/KR_Mittelafrika_l_english.yml
@@ -21,7 +21,7 @@ MAF_German_NCO:0 "German NCOs"
 MAF_German_NCO_desc:0 "We have chosen to keep our NCO positions Germans, while this does mean that our armed forces will be slightly more organised, it does mean that we have to fill our airforce with Natives..."
 MAF_Secret_Police_idea:0 "Deutsche Geheimpolizei"
 MAF_Forced_Labour_idea:0 "Forced Labour"
-MAF_German_Buisness:0 "German Buisness"
+MAF_German_Buisness:0 "German Business"
 MAF_Budget_Deficit_idea:0 "Budget Deficit"
 MAF_Improved_Education:0 "Improved Education"
 MAF_Colonial_Nation:0 "Colonial Nation"
@@ -30,6 +30,7 @@ MAF_Payment_For_Colonies:0 "African Colonial Payment"
 MAF_Native_Youth:0 "Native Youth Organisations"
 MAF_Logging2:0 "Mittelafrikan Wood"
 MAF_Logging1:0 "Mittelafrikan Wood"
+
 ### Parties ###
 MAF_authoritarian_democrat_party:0 "Schutzgebietsverwaltung"
 MAF_paternal_autocrat_party:0 "Schutzgebietsverwaltung"
@@ -115,7 +116,7 @@ mittel.18.t:0 "Mittelafrika Takes Equatorial Guinea"
 mittel.18.d:0 "The German colonial government in Mittelafrika has seized our ex-colony in Equatorial Guinea, one of Syndicalism's holdouts in Africa is gone..."
 mittel.18.a:0 "Colonies are exploitative anyway"
 mittel.19.t:0 "Skull Roads"
-mittel.19.d:0 "The minister of Forced Labour and Security, Reinhard Heydrich has put forward a plan to build roads using forced labour from neighbouring villages. This will obviously anger the local natives but the infastructure gained may be invaluable."
+mittel.19.d:0 "The minister of Forced Labour and Security, Reinhard Heydrich has put forward a plan to build roads using forced labour from neighbouring villages. This will obviously anger the local natives but the infrastructure gained may be invaluable."
 mittel.19.a:0 "Implement his plan fully"
 mittel.19.b:0 "Implement parts of his plan"
 mittel.19.c:0 "The fool will ruin us, discard his plan"
@@ -128,30 +129,31 @@ mittel.21.t:0 "Logging Campaigns"
 mittel.21.d:0 "Forced Labour Minister Reinhard Heydrich has suggested that we use native forced labour to chop down forests. This would increase our wood production greatly and make us a leading wood producer in the world. At the cost of angering the natives."
 mittel.21.a:0 "Implement his plan fully"
 mittel.21.b:0 "Implement parts of his plan"
-mittel.21.c:0 "Does Heydrich want to completly ruin Afrika?"
+mittel.21.c:0 "Does Heydrich want to completely ruin Afrika?"
 mittel.22.t:0 "Kaiser Factories"
-mittel.22.d:0 "The Minister of Forced Labour Reinhard Heydrich has suggested that we construct armament manufacturies directly inside Native villages and use forced labour inside them. He calls the manufacturies 'Kaiser Factories'. This would increase our armament production greatly. But the natives would probably not like making guns for their rulers."
+mittel.22.d:0 "The Minister of Forced Labour Reinhard Heydrich has suggested that we construct armament manufactures directly inside Native villages and use forced labour inside them. He calls the manufactures 'Kaiser Factories'. This would increase our armament production greatly. But the natives would probably not like making guns for their rulers."
 mittel.22.a:0 "Implement his plan fully"
 mittel.22.b:0 "Implement parts of his plan"
 mittel.22.c:0 "Kaiser Factories? What a stupid name"
 mittel.23.t:0 "Mining Campaigns"
-mittel.23.d:0 "The Minister of Forced Labour Reinhard Heydrich has put forward a plan to massivly increase mining in Mittelafrika through use of Forced Labor. This would increase the production of Metals in Mittelafrika. But the conditions inside these mines would probably not make the natives happy."
+mittel.23.d:0 "The Minister of Forced Labour Reinhard Heydrich has put forward a plan to massively increase mining in Mittelafrika through use of Forced Labour. This would increase the production of Metals in Mittelafrika. But the conditions inside these mines would probably not make the natives happy."
 mittel.23.a:0 "Implement his plan fully"
 mittel.23.b:0 "Implement parts of his plan"
 mittel.23.c:0 "Heydrich is a fool if he thinks this will work"
 mittel.24.t:0 "African Revolt!"
-mittel.24.d:0 "Due to our abuse of the natives in our Forced Labor programs, they have revolted against our rule! We have sent forces to put them down, but this is still quite a disaster."
+mittel.24.d:0 "Due to our abuse of the natives in our Forced Labour programs, they have revolted against our rule! We have sent forces to put them down, but this is still quite a disaster."
 mittel.24.a:0 "Oh no!"
-mittel.25.t:0 "Mittelafrikan Forced Labor"
-mittel.25.d:0 "The Staathalter of Mittelafrika, Herrman Göring has instituted Forced Labor in Mittelafrika, this has caused great suffering in Mittelafrika and has even caused a small revolt. If we let him continue this, he may cause the collapse of Mittelafrika. What should we do?"
+mittel.25.t:0 "Mittelafrikan Forced Labour"
+mittel.25.d:0 "The Staathalter of Mittelafrika, Herrman Göring has instituted Forced Labour in Mittelafrika, this has caused great suffering in Mittelafrika and has even caused a small revolt. If we let him continue this, he may cause the collapse of Mittelafrika. What should we do?"
 mittel.25.a:0 "Demand that he stop"
 mittel.25.b:0 "We can trust Göring with Mittelafrika"
 mittel.26.t:0 "The Kaiser asks us to stop"
-mittel.26.d:0 "We have recieved a message from Berlin: Stop Forced Labor. As we are a colonial government we should probably hede the Kaiser's word. But after all Göring has the final desicion in Mittelafrika..."
+mittel.26.d:0 "We have recieved a message from Berlin: Stop Forced Labour. As we are a colonial government we should probably hede the Kaiser's word. But after all Göring has the final decision in Mittelafrika..."
 mittel.26.a:0 "Perhaps we can try our luck..."
 mittel.27.t:0 "Colonists Arrive"
-mittel.27.b:0 "A new batch of immigrants and colonists from Germany and Mitteleuropa have arrived, most of them are settlling in the East coast of Africa, but there are a few brave adventurers looking elsewhere"
+mittel.27.b:0 "A new batch of immigrants and colonists from Germany and Mitteleuropa have arrived, most of them are settling in the East coast of Africa, but there are a few brave adventurers looking elsewhere"
 mittel.27.a:0 "Welcome!"
+
 ### Focuses ###
 MAF_African_Resources:0 "African Resources"
 MAF_Oil_In_Nigeria:0 "Oil In Nigeria"
