--- a/localisation/KR_Nationalist_France_l_english.yml
+++ b/localisation/KR_Nationalist_France_l_english.yml
@@ -22,7 +22,7 @@ NFA_anti_communard_desc:0 "After our defeat in the Weltkrieg of 1919, the commun
 NFA_french_in_exile:0 "France in Exile"
 NFA_french_in_exile_desc:0 "True Frenchmen are in short supply here in our colonies. Since we only recruit from Europeans, we are having some manpower issues."
 NFA_political_unrest:0 "Political Unrest"
-NFA_political_unrest_desc:0 "Despite the best efforts of our military government, discontent is rising in the Fourth Republic’s population. Prime Minister Maurice Janin’s recent political blunders has forced Marshall Petain to look for a replacement. However, onlookers are raising the concern that simply changing the Prime Minister won’t be enough to appease the population. Many believe this unrest is a signal for the future of France."
+NFA_political_unrest_desc:0 "Despite the best efforts of our military government, discontent is rising in the Fourth Republic's population. Prime Minister Maurice Janin's recent political blunders has forced Marshall Petain to look for a replacement. However, onlookers are raising the concern that simply changing the Prime Minister won't be enough to appease the population. Many believe this unrest is a signal for the future of France."
 NFA_anti_parlementarisme:0 "Control of the High Chamber"
 NFA_idealized_sovereign:0 "Support the Sovereign"
 NFA_free_republic:0 "A Liberal Republic"
@@ -52,13 +52,13 @@ NFA_effort_national_idea:0 "Effort National"
 
 ### Focuses ###
 NFA_industrial_revival:0 "Industrial Expansion"
-NFA_industrial_revival_desc:0 "Our industry here in Africa is far behind the one the communards have on the mainland. If we want to defeat them we’ll have to strengthen our industry significantly."
+NFA_industrial_revival_desc:0 "Our industry here in Africa is far behind the one the communards have on the mainland. If we want to defeat them we'll have to strengthen our industry significantly."
 NFA_sahara_census:0 "Begin the Saharan Census and Inventory"
 NFA_sahara_census_desc:0 "The French Government-in-Exile has had a tough economic situation, leading to several outlandish projects in order to gain more funds. Some bright young mind in a government agency has come up with an idea to make a census and inventory of the Sahara region. We should send out government officials and expeditions to survey the region."
 NFA_sahara_census_tooltip:0 "The Algeria-Central Africa Census and Inventory will begin... \n"
 NFA_inventory_progress:0 "The Algeria-Central Africa Inventory is complete."
 NFA_develop_ALG:0 "Routes Départementales"
-NFA_develop_ALG_desc:0 "Before thinking of enhancing our industrial output, we have to improve (and in some cases, create from scratch) the infrastructure of the Algerian departments. Unfortunately, they’re not nearly as developed as we hoped they would be."
+NFA_develop_ALG_desc:0 "Before thinking of enhancing our industrial output, we have to improve (and in some cases, create from scratch) the infrastructure of the Algerian departments. Unfortunately, they're not nearly as developed as we hoped they would be."
 NFA_industrial_expansion_ALG:0 "Dirigisme"
 NFA_industrial_expansion_ALG_desc:0 "Before our defeat against the red scum, Algeria was the most developed colony in our whole empire – but it was still a colony, one with low industrial capacity. The glaring lack of financial input has not made the situation better. We should sponsor state-run companies to alleviate this problem."
 NFA_military_factories_ALG:0 "Algerian War Industry"
@@ -74,7 +74,7 @@ NFA_improve_maritime_links_desc:0 "The cohesion between our Algerian industry an
 NFA_develop_mines:0 "Open New Mines"
 NFA_develop_mines_desc:0 "The first step in the exploitation of our West African holdings has proven successful. We should increase the number of mines and start building some basic metal refineries to support further development."
 NFA_colonial_resources:0 "Colonial Exploitation"
-NFA_colonial_resources_desc:0 "If we want to fuel our industry we need resources. Thankfully, our West African holdings are full of iron, aluminium, and other metals! If we dig new mines and make people work for us (willingly or not) we could improve our finances and reduce our industry’s reliance on foreign supplies!"
+NFA_colonial_resources_desc:0 "If we want to fuel our industry we need resources. Thankfully, our West African holdings are full of iron, aluminium, and other metals! If we dig new mines and make people work for us (willingly or not) we could improve our finances and reduce our industry's reliance on foreign supplies!"
 NFA_sahara:0 "Exploit the Saharan Oil"
 NFA_sahara_desc:0 "The Sahara is big and empty, but perhaps not as empty as we once thought? Plenty of Berber tribes live deep inside these territories where our reach does not fully extend. With traces of oil being found in the territory, the Sahara could be the solution to many of our problems if we exploit it!"
 NFA_algerie_refinery:0 "Algerian Refineries"
