--- a/localisation/KR_New_England_l_english.yml
+++ b/localisation/KR_New_England_l_english.yml
@@ -226,6 +226,7 @@ neeflavor.15.a:0 "Help the survivors!"
 neeflavor.15.b:0 "We can't help anyone"
 
 
+
 neeflavor.16.t:0 "The First Presidential election"
 neeflavor.16.d:0 "With the constitution now in place, the first elections can now be held in New England. Four new parties have formed to try and win the election. The conservatives have formed the Federalist Party lead by Joseph William Martin Jr. While the Yankee Party are running Joseph Kennedy Sr. The Social liberal Working Families party nominated John Gilbert Winant and the Social Democratic Progressive Party have nominated William Averell Harriman. Who will win this momentous occasion?"
 neeflavor.16.a:0 "The Federalist Party under Joseph W. Martin Jr. win the election!"
@@ -247,6 +248,7 @@ neeflavor.18.a:0 "The Federalist Party wins it!"
 neeflavor.18.b:0 "The Yankee Party wins it!"
 neeflavor.18.c:0 "The Working Families party wins it!"
 neeflavor.18.e:0 "The Progressive party wins it!"
+
 
 
 neeflavor.19.t:0 "Integration of New England"
@@ -281,8 +283,8 @@ neeflavor.30.t:0 "The Constitution of New England"
 neeflavor.30.d:0 "At the Hartford convention after much deliberation the delegates have signed the New England Constitution. This sets out the framework of our new Nation. While it is based on the American Model, we have also taken inspiration from our Canadian Allies. This is a momentous day. Long Live the New England Commonwealth!"
 neeflavor.30.a:0 "Nowhere does liberty appear in a more gracious form"
 
-neeflavor.31.t:0 "Road intergration with Canada?"
-neeflavor.31.d:0 "As we work on build up our economy, the question of which direction we should drive on. While the custom is to drive on the right, since the british revolution in 1925 Canada has driven on the left. Some political leaders have suggested that we switch to driving on the Left and better integrate our road network with the Canadians others of course wish to stay driving on the right. "
+neeflavor.31.t:0 "Road integration with Canada?"
+neeflavor.31.d:0 "As we work on build up our economy, the question of which direction we should drive on. While the custom is to drive on the right, since the British revolution in 1925 Canada has driven on the left. Some political leaders have suggested that we switch to driving on the Left and better integrate our road network with the Canadians others of course wish to stay driving on the right. "
 neeflavor.31.a:0 "Switch to Driving on the Left"
 neeflavor.31.b:0 "Switch to Driving on the Right"
 
