--- a/localisation/KR_Philippines_l_english.yml
+++ b/localisation/KR_Philippines_l_english.yml
@@ -392,7 +392,7 @@ phil.88.b:0 "Lets not risk it"
 # some description are already moved to the news event localisation files
 phil.84.a:0 "This should've been hidden!"
 
-phil..t:0 ""
-phil..d:0 ""
-phil..a:0 ""
-phil..b:0 ""
+phil..t:0 "-"
+phil..d:0 "-"
+phil..a:0 "-"
+phil..b:0 "-"
