--- a/localisation/KR_Russia_l_english.yml
+++ b/localisation/KR_Russia_l_english.yml
@@ -641,7 +641,7 @@ russia.2.d:0 "Signed in 1918, roughly a year after the fall of Nikolai II, the R
 russia.2.a:0 "The constitution guarantees freedom and stability!"
 
 russia.3.t:0 "Payment of the Brest-Litovsk Reparations"
-russia.3.d:0 "During the Berlin Conference in November 1935, the Germans decided to force us to repay the remaining part of the Weltkrieg war indemnities (agreed upon in the Brest-Litovsk treaty in 1918) one year earlier than expected, which has put the government in a delicate position. The current budget for 1936 is already stretched to a bare minimum, and if we are to pay the accursed Teutons, the cabinet sees no other alternative than imposing harsh austerity measures. The cuts in government spending will be most harshly felt in the social services sector and in the many homes of invalided war veterans depending on the state’s support. Our citizens are already disgruntled and dissatisfied with the incumbent coalition of Kadets, the Rightist Social Revolutionaries united under the even more unpopular presidency of Aleksandr Kerensky, and it is feared that these austerity measures will bring still more extreme political groupings unto the political scene."
+russia.3.d:0 "During the Berlin Conference in November 1935, the Germans decided to force us to repay the remaining part of the Weltkrieg war indemnities (agreed upon in the Brest-Litovsk treaty in 1918) one year earlier than expected, which has put the government in a delicate position. The current budget for 1936 is already stretched to a bare minimum, and if we are to pay the accursed Teutons, the cabinet sees no other alternative than imposing harsh austerity measures. The cuts in government spending will be most harshly felt in the social services sector and in the many homes of invalided war veterans depending on the state's support. Our citizens are already disgruntled and dissatisfied with the incumbent coalition of Kadets, the Rightist Social Revolutionaries united under the even more unpopular presidency of Aleksandr Kerensky, and it is feared that these austerity measures will bring still more extreme political groupings unto the political scene."
 russia.3.a:0 "We must increase austerity measures."
 
 russia.4.t:0 "Payment of the Brest-Litovsk Reparations"
@@ -699,11 +699,11 @@ russia.37.b:0 "Bring in Marshal Denikin instead!"
 russia.37.c:0 "Lukomsky can defeat the left SRs!"
 
 russia.38.t:0 "Assasination of Maria Spiridonova"
-russia.38.d:0 "During a meeting of the left SRs in Moscow, Maria Spiridonova was assassinated by members of Savinkov’s Combat Squads. The liquidation of such a prominent Socialist leader provoked an early and consequently ill-organised rebellion against the government. The rising was easily suppressed by a concert of the police and Combat Squads. Today, General Kornilov published a new law prohibiting the Left SR party and proscribing its leaders. With the flower of its leadership cut down by the scythe of the state, the Social Revolutionaries no longer pose any threat to the Kornilov-Savinkov dyarchy."
+russia.38.d:0 "During a meeting of the left SRs in Moscow, Maria Spiridonova was assassinated by members of Savinkov's Combat Squads. The liquidation of such a prominent Socialist leader provoked an early and consequently ill-organised rebellion against the government. The rising was easily suppressed by a concert of the police and Combat Squads. Today, General Kornilov published a new law prohibiting the Left SR party and proscribing its leaders. With the flower of its leadership cut down by the scythe of the state, the Social Revolutionaries no longer pose any threat to the Kornilov-Savinkov dyarchy."
 russia.38.a:0 "Thus unto all enemies of the state!"
 
 russia.39.t:0 "Kornilov Death"
-russia.39.d:0 "Lavr Georgiyevich Kornilov, supreme commander in chief and president of Russia passed away last night at his dacha outside Petrograd at the age of 68. With Kornilov gone nothing stands in the way for Savinkov merging the posts of prime minister and president and thus becoming unassailable in his rulership over Russia. The merger was approved by a dubious plebiscite where more than 90 percent of the electorate voted ‘Da’ (Yes). Savinkov now rules a potent and aggravated nation, ready to shed itself of the many humiliations faced since the Weltkrieg and step into the sun once more. The Vozhd commands!"
+russia.39.d:0 "Lavr Georgiyevich Kornilov, supreme commander in chief and president of Russia passed away last night at his dacha outside Petrograd at the age of 68. With Kornilov gone nothing stands in the way for Savinkov merging the posts of prime minister and president and thus becoming unassailable in his rulership over Russia. The merger was approved by a dubious plebiscite where more than 90 percent of the electorate voted ‘Da' (Yes). Savinkov now rules a potent and aggravated nation, ready to shed itself of the many humiliations faced since the Weltkrieg and step into the sun once more. The Vozhd commands!"
 russia.39.a:0 "The great helmsman of the Russian nation is no more."
 
 russia.40.t:0 "Directive No. 1"
@@ -711,12 +711,12 @@ russia.40.d:0 "With the merger of the offices of president and prime minister, B
 russia.40.a:0 "No shortage of hooks to hang the enemies of the state."
 
 russia.41.t:0 "Kornilov Death"
-russia.41.d:0 "Lavr Georgiyevich Kornilov, supreme commander in chief and president of Russia passed away last night at his dacha outside Petrograd at the age of 68. Two cliques are poised to seize control after Kornilov’s passing. The first, led by marshal Denikin, favours continued authoritarian military rule solidified by strong traditionalism. In opposition stands the young officers of Baron Wrangel. By no means a liberal, the Baron, however, knows that Russia must modernise and the societal issues of the state be resolved by a certain amount of governmental pragmatism."
+russia.41.d:0 "Lavr Georgiyevich Kornilov, supreme commander in chief and president of Russia passed away last night at his dacha outside Petrograd at the age of 68. Two cliques are poised to seize control after Kornilov's passing. The first, led by marshal Denikin, favours continued authoritarian military rule solidified by strong traditionalism. In opposition stands the young officers of Baron Wrangel. By no means a liberal, the Baron, however, knows that Russia must modernise and the societal issues of the state be resolved by a certain amount of governmental pragmatism."
 russia.41.a:0 "Marshal Denikin succeeds him!"
 russia.41.b:0 "Baron Wrangel rallies the reformist officers!"
 
 russia.43.t:0 "The Future of Russia"
-russia.43.d:0 "Marshal Denikin has seized the apparatus of state from his rivals within the military junta! An avowed traditionalist, Denikin is determined to keep the military’s influence in its zenith as a bulwark against the dangers of degenerate socialism. However, some sort of political platform would be useful in securing the survival of a proper order in Russia and as such, it has been proposed that the military restore the Romanov dynasty as a national focal point. Or we could also continue with the Stavka-State."
+russia.43.d:0 "Marshal Denikin has seized the apparatus of state from his rivals within the military junta! An avowed traditionalist, Denikin is determined to keep the military's influence in its zenith as a bulwark against the dangers of degenerate socialism. However, some sort of political platform would be useful in securing the survival of a proper order in Russia and as such, it has been proposed that the military restore the Romanov dynasty as a national focal point. Or we could also continue with the Stavka-State."
 russia.43.a:0 "The choice is yours."
 
 russia.42.t:0 "The Autocracy"
@@ -982,12 +982,12 @@ russia.1957.b:0 "How dare they! Attack!"
 russia.1958.t:0 "Finland makes its Move!"
 russia.1958.d:0 "The Finns have claimed authority over our Karelian provinces, and have occupied Murmansk and the provinces on the White Sea. How should we react?"
 russia.1958.a:0 "Winning the Civil War is more important than Karelia or Lapland..."
-russia.1958.b:0 "The Finns won’t get an Inch!"
+russia.1958.b:0 "The Finns won't get an Inch!"
 
 russia.1959.t:0 "Finland makes its Move!"
 russia.1959.d:0 "The Finns have claimed authority over Karelian provinces, and have occupied Murmansk and the provinces on the White Sea. How should we react to this act of capitalist aggression?"
 russia.1959.a:0 "Winning the Civil War is more important than Karelia or Lapland..."
-russia.1959.b:0 "The Finns won’t get an Inch!"
+russia.1959.b:0 "The Finns won't get an Inch!"
 
 russia.1960.t:0 "The Treaty of Arkhangelsk"
 russia.1960.d:0 "We've been beaten by the Finns, how did this happen? They've seized the whole White Sea Tundra!"
