--- a/localisation/KR_Siam_l_english.yml
+++ b/localisation/KR_Siam_l_english.yml
@@ -244,7 +244,7 @@ siam.501.a:0 "A State Funeral for Him"
  SIA_luangphibunplan_desc:0 "Emphasized Superior Firepower Doctrine"
  SIA_seriroengritplan_desc:0 "Emphasizes Mass Combat Doctrine"
  SIA_phrayaphahonplan_desc:0 "Emphasizes Grand battleplan Doctrine"
- SIA_amodernarmy:0 ""
+ SIA_amodernarmy:0 "-"
  SIA_militaryaffairs:0 "Military Affaris"
  SIA_jungletraining:0 "Jungle Combat Training"
  SIA_phibunsongkhramplan:0 "Phibunsongkhram's Reform"
