--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -152,10 +152,10 @@ GER_rocket_artillery_equipment_2:0 "21 cm Nebelwerfer 42"
 GER_gw_tank_equipment:0 "Sturmpanzerwagen A7V"
 GER_gw_tank_equipment_short:0 "A7V"
 GER_gw_tank_equipment_desc:0 "The Sturmpanzerwagen A7V was a German tank used extensively during the Weltkrieg, and is often seen depicted in works of art celebrating the German victory over the Entente. However, its design has since become obsolete and Germany has come to use newer, more complicated tank designs."
-GER_light_tank_equipment_1:0 "Sturmpanzerwagen M.I "Kätzchen""
+GER_light_tank_equipment_1:0 "Sturmpanzerwagen M.I "Kätzchen"-"
 GER_light_tank_equipment_1_short:0 "Kätzchen"
 #GER_light_tank_equipment_1_desc:0 "The Panzer I was a light tank produced in Germany in the 1930s. Design of the Panzer I began in 1932 and mass production began in 1934. Intended only as a training tank to introduce the concept of armoured warfare to the German Army, the PzKpfw I was used extensively in combat due to a lack of more modern machines."
-GER_light_tank_equipment_2:0 "Sturmpanzerwagen M.II "Ozelot""
+GER_light_tank_equipment_2:0 "Sturmpanzerwagen M.II "Ozelot"-"
 GER_light_tank_equipment_2_short:0 "Ozelot"
 #GER_light_tank_equipment_2_desc:0 "The Panzer II was originally designed as a stopgap while larger, more advanced tanks were developed, but it saw extensive use in combat due to a lack of more capable tank."
 GER_light_tank_equipment_3:0 "VK1602 Leopard"
@@ -189,13 +189,13 @@ GER_light_tank_aa_equipment_3:0 "Flakpanzer 1602"
 GER_light_tank_aa_equipment_3_short:0 "FlakPz 1602"
 #GER_light_tank_aa_equipment_3_desc:0 "An anti-air cannon mounted on the chassis of a VK1602."
 
-GER_medium_tank_equipment_1:0 "Kavalleriepanzerwagen P.II "Donnerschlag""
+GER_medium_tank_equipment_1:0 "Kavalleriepanzerwagen P.II "Donnerschlag"-"
 GER_medium_tank_equipment_1_short:0 "Donnerschlag"
 #GER_medium_tank_equipment_1_desc:0 "As early as 1934/35, General Heinz Guderian envisioned two basic types to act as the most numerous equipment for the future German Tank Divisions. The first vehicle was to be armed with anti-tank gun and two machine guns and the second one was to be a support vehicle armed with a larger calibre gun. The first one eventually became known as Panzerkampfwagen III, which was to be a standard tank for the three light companies of a tank battalion. The second one became known as Panzerkampfwagen IV."
-GER_medium_tank_equipment_2:0 "Kavalleriepanzerwagen P.IId "Donnerschlag-4""
+GER_medium_tank_equipment_2:0 "Kavalleriepanzerwagen P.IId "Donnerschlag-4"-"
 GER_medium_tank_equipment_2_short:0 "Donnerschlag-4"
 #GER_medium_tank_equipment_2_desc:0 "Designed as an infantry-support tank, the Panzer IV was not originally intended to engage enemy armour - that function was performed by the lighter Panzer III. However, with the flaws of pre-war doctrine becoming apparent and in the face of Soviet T-34 tanks, the Panzer IV soon assumed the tanks-fighting role of its increasingly obsolete cousin. The most widely manufactured and deployed German tanks of the Second Weltkrieg, the Panzer IV was used as the base for many other fighting vehicles."
-GER_medium_tank_equipment_3:0 "Kavalleriepanzerwagen P.IIIf "Kriegsengel""
+GER_medium_tank_equipment_3:0 "Kavalleriepanzerwagen P.IIIf "Kriegsengel"-"
 GER_medium_tank_equipment_3_short:0 "Kriegsengel"
 #GER_medium_tank_equipment_3_desc:0 "Panther is the common name of a medium tank deployed by Germany in the Second Weltkrieg from mid-1943 to the end of the European war in 1945. It was intended as a counter to the Russian T-34, and as a replacement for the Panzer III and Panzer IV. While never replacing the latter, it served alongside it and the heavier Tiger tank until the end of the war. The Panther's excellent combination of firepower, mobility, and protection served as a benchmark for other nations' late war and post-war tank designs, and it is regarded as one of the best tank of the Second Weltkrieg."
 GER_medium_tank_artillery_equipment_1:0 "Grille"
@@ -1822,33 +1822,33 @@ SOV_light_tank_equipment_2:0 "BT-7"
 SOV_light_tank_equipment_2_short:0 "BT-7"
 SOV_light_tank_artillery_equipment_1:0 "SU-76-26"
 SOV_light_tank_artillery_equipment_1_short:0 "SU-76-26"
-#SOV_light_tank_artillery_equipment_1_desc:0 ""
+#SOV_light_tank_artillery_equipment_1_desc:0 "-"
 SOV_light_tank_artillery_equipment_2:0 "SU-76-7"
 SOV_light_tank_artillery_equipment_2_short:0 "SU-76-7"
-#SOV_light_tank_artillery_equipment_2_desc:0 ""
+#SOV_light_tank_artillery_equipment_2_desc:0 "-"
 SOV_light_tank_artillery_equipment_3:0 "SU-76"
 SOV_light_tank_artillery_equipment_3_short:0 "SU-76"
-#SOV_light_tank_artillery_equipment_3_desc:0 ""
+#SOV_light_tank_artillery_equipment_3_desc:0 "-"
 SOV_light_tank_equipment_3:0 "T-60 scout"
 SOV_light_tank_equipment_3_short:0 "T-60"
 SOV_light_tank_destroyer_equipment_1:0 "SU-37"
 SOV_light_tank_destroyer_equipment_1_short:0 "SU-37"
-#SOV_light_tank_destroyer_equipment_1_desc:0 ""
+#SOV_light_tank_destroyer_equipment_1_desc:0 "-"
 SOV_light_tank_destroyer_equipment_2:0 "SU-45"
 SOV_light_tank_destroyer_equipment_2_short:0 "SU-45"
-#SOV_light_tank_destroyer_equipment_2_desc:0 ""
+#SOV_light_tank_destroyer_equipment_2_desc:0 "-"
 SOV_light_tank_destroyer_equipment_3:0 "ZiS-30"
 SOV_light_tank_destroyer_equipment_3_short:0 "ZiS-30"
-#SOV_light_tank_destroyer_equipment_3_desc:0 ""
+#SOV_light_tank_destroyer_equipment_3_desc:0 "-"
 SOV_light_tank_aa_equipment_1:0 "ZSU-12.7"
 SOV_light_tank_aa_equipment_1_short:0 "ZSU-12.7"
-#SOV_light_tank_aa_equipment_1_desc:0 ""
+#SOV_light_tank_aa_equipment_1_desc:0 "-"
 SOV_light_tank_aa_equipment_2:0 "ZSU-12.7-2"
 SOV_light_tank_aa_equipment_2_short:0 "ZSU-12.7-2"
-#SOV_light_tank_aa_equipment_2_desc:0 ""
+#SOV_light_tank_aa_equipment_2_desc:0 "-"
 SOV_light_tank_aa_equipment_3:0 "ZSU-37"
 SOV_light_tank_aa_equipment_3_short:0 "ZSU-37"
-#SOV_light_tank_aa_equipment_3_desc:0 ""
+#SOV_light_tank_aa_equipment_3_desc:0 "-"
 
 SOV_medium_tank_equipment_1:0 "A-32"
 SOV_medium_tank_equipment_1_short:0 "A-32"
@@ -1858,31 +1858,31 @@ SOV_medium_tank_equipment_3:0 "T-44"
 SOV_medium_tank_equipment_3_short:0 "T-44"
 SOV_medium_tank_artillery_equipment_1:0 "SU-76-32"
 SOV_medium_tank_artillery_equipment_1_short:0 "SU-76-32"
-#SOV_medium_tank_artillery_equipment_1_desc:0 ""
+#SOV_medium_tank_artillery_equipment_1_desc:0 "-"
 SOV_medium_tank_artillery_equipment_2:0 "SU-122"
 SOV_medium_tank_artillery_equipment_2_short:0 "SU-122"
-#SOV_medium_tank_artillery_equipment_2_desc:0 ""
+#SOV_medium_tank_artillery_equipment_2_desc:0 "-"
 SOV_medium_tank_artillery_equipment_3:0 "SU-152-44"
 SOV_medium_tank_artillery_equipment_3_short:0 "SU-152-44"
-#SOV_medium_tank_artillery_equipment_3_desc:0 ""
+#SOV_medium_tank_artillery_equipment_3_desc:0 "-"
 SOV_medium_tank_destroyer_equipment_1:0 "SU-85-32"
 SOV_medium_tank_destroyer_equipment_1_short:0 "SU-85-32"
-#SOV_medium_tank_destroyer_equipment_1_desc:0 ""
+#SOV_medium_tank_destroyer_equipment_1_desc:0 "-"
 SOV_medium_tank_destroyer_equipment_2:0 "SU-85"
 SOV_medium_tank_destroyer_equipment_2_short:0 "SU-85"
-#SOV_medium_tank_destroyer_equipment_2_desc:0 ""
+#SOV_medium_tank_destroyer_equipment_2_desc:0 "-"
 SOV_medium_tank_destroyer_equipment_3:0 "SU-100"
 SOV_medium_tank_destroyer_equipment_3_short:0 "SU-100"
-#SOV_medium_tank_destroyer_equipment_3_desc:0 ""
+#SOV_medium_tank_destroyer_equipment_3_desc:0 "-"
 SOV_medium_tank_aa_equipment_1:0 "ZSU-37-32"
 SOV_medium_tank_aa_equipment_1_short:0 "ZSU-37-32"
-#SOV_medium_tank_aa_equipment_1_desc:0 ""
+#SOV_medium_tank_aa_equipment_1_desc:0 "-"
 SOV_medium_tank_aa_equipment_2:0 "ZSU-37-34"
 SOV_medium_tank_aa_equipment_2_short:0 "ZSU-37-34"
-#SOV_medium_tank_aa_equipment_2_desc:0 ""
+#SOV_medium_tank_aa_equipment_2_desc:0 "-"
 SOV_medium_tank_aa_equipment_3:0 "ZSU-57-44"
 SOV_medium_tank_aa_equipment_3_short:0 "ZSU-57-44"
-#SOV_medium_tank_aa_equipment_3_desc:0 ""
+#SOV_medium_tank_aa_equipment_3_desc:0 "-"
 
 SOV_heavy_tank_equipment_1:0 "T-35"
 SOV_heavy_tank_equipment_1_short:0 "T-35"
@@ -1892,51 +1892,51 @@ SOV_heavy_tank_equipment_3:0 "IS"
 SOV_heavy_tank_equipment_3_short:0 "IS"
 SOV_heavy_tank_artillery_equipment_1:0 "SU-14"
 SOV_heavy_tank_artillery_equipment_1_short:0 "SU-14"
-#SOV_heavy_tank_artillery_equipment_1_desc:0 ""
+#SOV_heavy_tank_artillery_equipment_1_desc:0 "-"
 SOV_heavy_tank_artillery_equipment_2:0 "SU-100-Y"
 SOV_heavy_tank_artillery_equipment_2_short:0 "SU-100-Y"
-#SOV_heavy_tank_artillery_equipment_2_desc:0 ""
+#SOV_heavy_tank_artillery_equipment_2_desc:0 "-"
 SOV_heavy_tank_artillery_equipment_3:0 "ISU-152"
 SOV_heavy_tank_artillery_equipment_3_short:0 "ISU-152"
-#SOV_heavy_tank_artillery_equipment_3_desc:0 ""
+#SOV_heavy_tank_artillery_equipment_3_desc:0 "-"
 SOV_heavy_tank_destroyer_equipment_1:0 "SMK"
 SOV_heavy_tank_destroyer_equipment_1_short:0 "SMK"
-#SOV_heavy_tank_destroyer_equipment_1_desc:0 ""
+#SOV_heavy_tank_destroyer_equipment_1_desc:0 "-"
 SOV_heavy_tank_destroyer_equipment_2:0 "SU-152"
 SOV_heavy_tank_destroyer_equipment_2_short:0 "SU-152"
-#SOV_heavy_tank_destroyer_equipment_2_desc:0 ""
+#SOV_heavy_tank_destroyer_equipment_2_desc:0 "-"
 SOV_heavy_tank_destroyer_equipment_3:0 "ISU-122"
 SOV_heavy_tank_destroyer_equipment_3_short:0 "ISU-122"
-#SOV_heavy_tank_destroyer_equipment_3_desc:0 ""
+#SOV_heavy_tank_destroyer_equipment_3_desc:0 "-"
 SOV_heavy_tank_aa_equipment_1:0 "ZSU-12.7-4"
 SOV_heavy_tank_aa_equipment_1_short:0 "ZSU-12.7-4"
-#SOV_heavy_tank_aa_equipment_1_desc:0 ""
+#SOV_heavy_tank_aa_equipment_1_desc:0 "-"
 SOV_heavy_tank_aa_equipment_2:0 "ZSU-37-Y"
 SOV_heavy_tank_aa_equipment_2_short:0 "ZSU-37-Y"
-#SOV_heavy_tank_aa_equipment_2_desc:0 ""
+#SOV_heavy_tank_aa_equipment_2_desc:0 "-"
 SOV_heavy_tank_aa_equipment_3:0 "ISU-57-2"
 SOV_heavy_tank_aa_equipment_3_short:0 "ISU-57-2"
-#SOV_heavy_tank_aa_equipment_3_desc:0 ""
+#SOV_heavy_tank_aa_equipment_3_desc:0 "-"
 
 SOV_super_heavy_tank_equipment_1:0 "IS-7"
 SOV_super_heavy_tank_equipment_1_short:0 "IS-7"
 SOV_super_heavy_tank_artillery_equipment_1:0 "ISU-203"
 SOV_super_heavy_tank_artillery_equipment_1_short:0 "ISU-203"
-#SOV_super_heavy_tank_artillery_equipment_1_desc:0 ""
+#SOV_super_heavy_tank_artillery_equipment_1_desc:0 "-"
 SOV_super_heavy_tank_destroyer_equipment_1:0 "ISU-130"
 SOV_super_heavy_tank_destroyer_equipment_1_short:0 "ISU-130"
-#SOV_super_heavy_tank_destroyer_equipment_1_desc:0 ""
+#SOV_super_heavy_tank_destroyer_equipment_1_desc:0 "-"
 SOV_super_heavy_tank_aa_equipment_1:0 "ISU-57-4"
 SOV_super_heavy_tank_aa_equipment_1_short:0 "ISU-57-4"
-#SOV_super_heavy_tank_aa_equipment_1_desc:0 ""
+#SOV_super_heavy_tank_aa_equipment_1_desc:0 "-"
 SOV_modern_tank_equipment_1:0 "T-54"
 SOV_modern_tank_equipment_1_short:0 "T-54"SOV_modern_tank_artillery_equipment_1:0 "SU-152-54"
 SOV_modern_tank_artillery_equipment_1_short:0 "SU-152-54"
-#SOV_modern_tank_artillery_equipment_1_desc:0 ""SOV_modern_tank_destroyer_equipment_1:0 "SU-122-54"
+#SOV_modern_tank_artillery_equipment_1_desc:0 "-"SOV_modern_tank_destroyer_equipment_1:0 "SU-122-54"
 SOV_modern_tank_destroyer_equipment_1_short:0 "SU-122-54"
-#SOV_modern_tank_destroyer_equipment_1_desc:0 ""SOV_modern_tank_aa_equipment_1:0 "ZSU-57-2"
+#SOV_modern_tank_destroyer_equipment_1_desc:0 "-"SOV_modern_tank_aa_equipment_1:0 "ZSU-57-2"
 SOV_modern_tank_aa_equipment_1_short:0 "ZSU-57-2"
-#SOV_modern_tank_aa_equipment_1_desc:0 ""
+#SOV_modern_tank_aa_equipment_1_desc:0 "-"
 
 ######################################
 ## NORWAY
@@ -2817,7 +2817,7 @@ SAF_super_heavy_tank_destroyer_equipment_1_short:0 "Iron Duke"
 
 NZL_gw_tank_equipment:1 "Mark V"
 NZL_gw_tank_equipment_short:1 "Mark V"
-NZL_light_tank_equipment_1:0 "Bob Semple "Tank""
+NZL_light_tank_equipment_1:0 "Bob Semple "Tank"-"
 NZL_light_tank_equipment_1_short:0 "Bob Semple"
 NZL_light_tank_equipment_1_desc:0 "For a certain value of "tank"."
 NZL_light_tank_equipment_2:0 "Shofield Tank"
@@ -3819,37 +3819,37 @@ ARG_infantry_equipment_3_short:0 "Halcón M-43"
 ####### Siamese Technology Localization #######
 
 # Tanks
-SIA_light_tank_equipment_1:0 "Light Tank Type 76 "Kajorndej""
+SIA_light_tank_equipment_1:0 "Light Tank Type 76 "Kajorndej"-"
 SIA_light_tank_equipment_1_short:0 "LT Type 76"
 SIA_light_tank_equipment_1_desc:0 "The Siamese version of 'Vickers 6-Ton Tank' or 'Vickers Mark E' procured by the Siamese government in 1934."
-SIA_light_tank_equipment_2:0 "Light Tank Type 83 "Vachiravut""
+SIA_light_tank_equipment_2:0 "Light Tank Type 83 "Vachiravut"-"
 SIA_light_tank_equipment_2_short:0 "LT Type 83"
 SIA_light_tank_equipment_2_desc:0 "The Siamese version of the Japanese Type 95 Ha-go license-built by the Chaiseri Industries, a giant Siamese Rubber-Steel conglomerate to kickstart the development of its own indigenous tank design."
-SIA_light_tank_equipment_3:0 "Chaiseri Light Tank Type 83TH "Chomklao""
+SIA_light_tank_equipment_3:0 "Chaiseri Light Tank Type 83TH "Chomklao"-"
 SIA_light_tank_equipment_3_short:0 "LT Type 83TH"
 SIA_light_tank_equipment_3_desc:0 "The 'LT Type 83TH' was a Type 95 Ha-go variant with 75mm Tank gun, improved engine and sloped angle developed and produced by Chaiseri Industries."
-SIA_medium_tank_equipment_1:0 "Chaiseri Medium Tank Type 258 "U-Thong""
+SIA_medium_tank_equipment_1:0 "Chaiseri Medium Tank Type 258 "U-Thong"-"
 SIA_medium_tank_equipment_1_short:0 "U-Thong"
 SIA_medium_tank_equipment_1_desc:0 "Chaiseri's first attempt in developing medium tank. Its prototype suffers a lot in Jungle and Swamp environment of Southeast Asia but it was deemed good enough by the Ministry of Defence who quickly rushed the production line to prepare for the coming war."
-SIA_medium_tank_equipment_2:0 "Chaiseri Medium Tank Type 260 "Naresuan""
+SIA_medium_tank_equipment_2:0 "Chaiseri Medium Tank Type 260 "Naresuan"-"
 SIA_medium_tank_equipment_2_short:0 "Naresuan"
 SIA_medium_tank_equipment_2_desc:0 "One of the most successful Siamese/Thai tank of the war. The tank itself was design specifically for Southeast Asia weather and terrain with high reliability and low maintenance."
-SIA_medium_tank_equipment_3:0 "Chaiseri Medium Tank Type 260/112 "Taksin""
+SIA_medium_tank_equipment_3:0 "Chaiseri Medium Tank Type 260/112 "Taksin"-"
 SIA_medium_tank_equipment_3_short:0 "Taksin"
 SIA_medium_tank_equipment_3_desc:0 "The TH-260/112 was a TH-260 variant with 112mm low-velocity howitzer, improved engine and thicker tank hull."
-SIA_heavy_tank_equipment_1:0 "Heavy Tank Type 01 "Ramkamhaeng""
+SIA_heavy_tank_equipment_1:0 "Heavy Tank Type 01 "Ramkamhaeng"-"
 SIA_heavy_tank_equipment_1_short:0 "Ramkamhaeng"
 SIA_heavy_tank_equipment_1_desc:0 "Siamese first attempt at its own indigenous tank design. Didn't saw widespread use due to being too heavy and thus being unusable for Southeast Asian terrain such as swamps & rice fields."
-SIA_heavy_tank_equipment_2:0 "Chaiseri Heavy Tank Type 84 "Ekathotsarot""
+SIA_heavy_tank_equipment_2:0 "Chaiseri Heavy Tank Type 84 "Ekathotsarot"-"
 SIA_heavy_tank_equipment_2_short:0 "Ekathotsarot"
 SIA_heavy_tank_equipment_2_desc:0 "Heavier armed Type 260, with 2 cannon on its turret."
-SIA_heavy_tank_equipment_3:0 "Chaiseri Heavy Tank Type 301 "Mongkut""
+SIA_heavy_tank_equipment_3:0 "Chaiseri Heavy Tank Type 301 "Mongkut"-"
 SIA_heavy_tank_equipment_3_short:0 "Mongkut"
 SIA_heavy_tank_equipment_3_desc:0 "The Type 301 was a heavy tank developed by the Chaiseri Industries in 1943."
-SIA_super_heavy_tank_equipment_1:0 "Chaiseri Super Heavy Tank Type 311 "Pinklao""
+SIA_super_heavy_tank_equipment_1:0 "Chaiseri Super Heavy Tank Type 311 "Pinklao"-"
 SIA_super_heavy_tank_equipment_1_short:0 "Pinklao"
 SIA_super_heavy_tank_equipment_1_desc:0 "The Type 311 was a super heavy tank developed by the Chaiseri Industries in 1943."
-SIA_modern_tank_equipment_1:0 "Chaiseri TH-401 MBT "Avatarn""
+SIA_modern_tank_equipment_1:0 "Chaiseri TH-401 MBT "Avatarn"-"
 SIA_modern_tank_equipment_1_short:0 "Avatarn"
 SIA_modern_tank_equipment_1_desc:0 "The TH-401 was a MBT developed by the Chaiseri Industries in 1945."
 
