--- a/localisation/KR_Norway_l_english.yml
+++ b/localisation/KR_Norway_l_english.yml
@@ -42,8 +42,8 @@ norway.3.t:0 "State of the Economy"
 norway.3.d:0 "Two weeks after the stock crash the markets have finally stabilised. As a result of the abysmal state of the economy, the government has declared it will take steps to encourage growth. However, unemployment is very high and the public is quite dissatisfied with the government."
 norway.3.a:0 "At least it can only get better!"
 norway.4.t:0 "State of the Economy"
-norway.4.d:0 "Two weeks after the stock crash the markets have finally stabilised. While unemployment is high, the situation is not as bad as initially thought. The bank industry is relatively stable and most companies have announced an end to the layoffs. While the public response to the government’s action is mixed, it seems we are better off than most of Europe…"
-norway.4.a:0 "Let’s hope recovery is swift!"
+norway.4.d:0 "Two weeks after the stock crash the markets have finally stabilised. While unemployment is high, the situation is not as bad as initially thought. The bank industry is relatively stable and most companies have announced an end to the layoffs. While the public response to the government's action is mixed, it seems we are better off than most of Europe…"
+norway.4.a:0 "Let's hope recovery is swift!"
 norway.5.t:0 "End of the NKP"
 norway.5.d:0 "Today the NKP, the Norwegian Communist Party, disbanded itself. Having failed to capitalise on the current economic crisis, the party decided to disband itself and have its member join the newly created Norwegian National-Syndicalist Party. Based upon the new teaching of politicians such as Benito Mussolini and Oswald Mosley, popularly known as "Totalism", the party hopes to aspire to greater things than communism ever proved capable of."
 norway.5.a:0 "Yet another party of the left?"
