--- a/localisation/KR_War_and_Peace_in_China_l_english.yml
+++ b/localisation/KR_War_and_Peace_in_China_l_english.yml
@@ -154,11 +154,11 @@ warpeacechina.27.d:0 "The Qing Empire is falling to its enemies, we must not let
 warpeacechina.27.a:0 "Move the Legion into the city and surrounding area!"
 warpeacechina.27.b:0 "To take the city would be the end of the Qing"
 warpeacechina.28.t:0 "The AOG has taken border regions region!"
-warpeacechina.28.d:0 "The treacherous Germans believe that we are now doomed to fail in our war against the aggressors, and have begun to seize our southern industrial zones in and around Nanjing in order to ‘protect’ them. This insult cannot go unanswered, yet can we really afford a another front?"
+warpeacechina.28.d:0 "The treacherous Germans believe that we are now doomed to fail in our war against the aggressors, and have begun to seize our southern industrial zones in and around Nanjing in order to ‘protect' them. This insult cannot go unanswered, yet can we really afford a another front?"
 warpeacechina.28.a:0 "Leave them for now; their time will come"
 warpeacechina.28.b:0 "The Germans must be punished! Their land is rightfully ours; mobilise!"
 warpeacechina.29.t:0 "The Qing have fallen"
-warpeacechina.29.d:0 "The Qing Empire has been completely overrun, though our forces managed to secure the heavily industrialised Nanjing area. However, now that the war is over, what should be done with this territory? It may be possible to re-establish a provisional pro-German Republican Chinese government in Nanjing. This may prove somewhat popular with the Chinese Nationalists under our authority. However, members of the Board of Directors have begun to press for the territory’s full integration into the AOG administration."
+warpeacechina.29.d:0 "The Qing Empire has been completely overrun, though our forces managed to secure the heavily industrialised Nanjing area. However, now that the war is over, what should be done with this territory? It may be possible to re-establish a provisional pro-German Republican Chinese government in Nanjing. This may prove somewhat popular with the Chinese Nationalists under our authority. However, members of the Board of Directors have begun to press for the territory's full integration into the AOG administration."
 warpeacechina.29.a:0 "Establish the Nanjing Government"
 warpeacechina.29.b:0 "Full integration!"
 warpeacechina.43.t:0 "Now could be our chance!"
